--- a/GPT_SoVITS/tools/i18n/locale/en_US.json
+++ b/GPT_SoVITS/tools/i18n/locale/en_US.json
@@ -18,6 +18,7 @@
     "ASR 模型": "ASR model",
     "ASR 模型尺寸": "ASR model size",
     "ASR 语言设置": "ASR language",
+    "CPU训练,较慢": "Training on CPU (slower)",
     "GPT 训练: 模型权重文件在 GPT_weights/": "GPT Training: Model Weights saved in GPT_weights/",
     "GPT模型列表": "GPT weight list",
     "GPT训练": "GPT Training",
@@ -25,12 +26,13 @@
     "GPU卡号,只能填1个整数": "GPU number, can only input ONE integer",
     "GPU卡号以-分割，每个卡号一个进程": "GPU number is separated by -, each GPU will run one process ",
     "LoRA秩": "LoRA Rank",
-    "SoVITS V3 底模缺失，无法加载相应 LoRA 权重": "Missing Pretrained SoVITS V3 Model, Cannot Load LoRA Weights",
     "SoVITS 训练: 模型权重文件在 SoVITS_weights/": "SoVITS Training: Model Weights saved in SoVITS_weights/",
     "SoVITS模型列表": "SoVITS weight list",
     "SoVITS训练": "SoVITS Training",
+    "Submit Text: 将当前页所有文本框内容手工保存到内存和文件(翻页前后或者退出标注页面前如果没点这个按钮，你再翻回来就回滚了，白忙活。)": "Submit Text: Manually save all text box contents on the current page to memory and file (If you don't click this button before switching pages or exiting the labeling page, the data will be rolled back when you return, which would be a waste of work.)",
     "TTS推理WebUI": "TTS Inference WebUI",
     "UVR5人声伴奏分离&去混响去延迟工具": "UVR5 WebUI (Vocal Separation/Deecho/Dereverb)",
+    "V3不支持无参考文本模式，请填写参考文本！": "V3 does not support the no-reference-text mode. Please provide reference text!",
     "alpha_mix:混多少比例归一化后音频进来": "alpha_mix: proportion of normalized audio merged into dataset",
     "batch_size": "Batch Size",
     "hop_size:怎么算音量曲线，越小精度越大计算量越高（不是精度越大效果越好）": "hop_size: FO hop size, the smaller the value, the higher the accuracy）",
@@ -45,8 +47,11 @@
     "v3暂不支持该模式，使用了会报错。": "v3 does not support this mode currently, using it will cause an error.",
     "v3输出如果觉得闷可以试试开超分": "For V3 model, if generated audio sounds somewhat muffled, try enable audio super-resolution.",
     "不切": "No slice",
+    "不训练直接推v2ProPlus底模！": "Use v2ProPlus base model directly without training!",
+    "不训练直接推v2Pro底模！": "Use v2Pro base model directly without training!",
+    "不训练直接推v2底模！": "Use v2 base model directly without training!",
+    "不训练直接推v3底模！": "Use v3 base model directly without training!",
     "中文": "Chinese",
-    "中文教程文档": "Chinese Tutorial",
     "中英混合": "Chinese-English Mixed",
     "主参考音频(请上传3~10秒内参考音频，超过会报错！)": "Primary Reference Audio (Please upload reference audio within 3-10 seconds, exceeding this limit will cause an error!)",
     "主参考音频的文本": "Text of Primary Reference Audio",
@@ -87,6 +92,7 @@
     "句间停顿秒数": "Pause Duration between Sentences (Seconds)",
     "可选项：通过拖拽多个文件上传多个参考音频（建议同性），平均融合他们的音色。如不填写此项，音色由左侧单个参考音频控制。如是微调模型，建议参考音频全部在微调训练集音色内，底模不用管。": "Optional: Upload multiple reference audio files by dragging and dropping them (recommended to be of the same gender), and average their tone. If this option is left blank, the tone will be controlled by the single reference audio on the left. If fine-tuning the model, it is recommended that all reference audio files have tones within the fine-tuning training set; the pretrained model can be ignored.",
     "合成语音": "Start inference",
+    "合成音频": "Synthesize Audio",
     "合格的文件夹路径格式举例： E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例(去文件管理器地址栏拷就行了)。": "An example of a valid folder path format: E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例 (simply copy the address from the file manager's address bar).",
     "后续将支持转音素、手工修改音素、语音合成分步执行。": "Support for Phoneme Conversion, Manual Phoneme Editing, and Step-by-Step Speech Synthesis will be added in the future.",
     "听不清参考音频说的啥(不晓得写啥)可以开。开启后无视填写的参考文本。": "If reference audio is not clear or unsure what to write, enable this option to ignore the reference text.",
@@ -104,11 +110,15 @@
     "已关闭": " is Closed",
     "已完成": " Finished",
     "已开启": " is Opened",
+    "并行合成中": "Parallel Synthesis in Progress",
     "并行推理": "Parallel Inference",
     "并行推理模式已关闭": "Parallel Inference Mode Disabled",
     "并行推理模式已开启": "Parallel Inference Mode Enabled",
+    "底模缺失，无法加载相应 LoRA 权重": "Missing Pretrained Model, Cannot Load LoRA Weights",
     "开启": "Open ",
     "开启无参考文本模式。不填参考文本亦相当于开启。": "Enable no reference mode. If you don't fill 'Text for reference audio', no reference mode will be enabled.",
+    "当开启并行推理模式时，SoVits V3/4模型不支持分桶处理，已自动关闭分桶处理": "When parallel inference mode is enabled, SoVITS V3/4 models do not support bucket processing; bucket processing has been automatically disabled.",
+    "微调模型信息": "Fine-tuned Model Information",
     "微调训练": "Fine-Tuning",
     "怎么切": "How to slice the sentence",
     "总训练轮数total_epoch": "Total training epochs (total_epoch):",
@@ -140,8 +150,8 @@
     "模型": "Model",
     "模型分为三类：": "Models are categorized into three types:",
     "模型切换": "Model switch",
+    "模型加载中，请等待": "Model is loading, please wait...",
     "每张显卡的batch_size": "Batch size per GPU:",
-    "版本": "Version",
     "粤英混合": "Yue-English Mixed",
     "粤语": "Yue",
     "终止合成": "Terminate Synthesis",
@@ -150,6 +160,7 @@
     "缺少音素数据集": "Missing Phoneme Dataset",
     "缺少音频数据集": "Missing Audio Dataset",
     "英文": "English",
+    "训练模型的版本": "Version of the trained model",
     "训练集格式化一键三连": "Training Set One-Click Formatting",
     "训练集格式化工具": "Dataset Formatting Tool",
     "语义Token提取": "Semantics Token Extraction",
@@ -163,7 +174,6 @@
     "语音识别": "Speech Recognition",
     "语音识别工具": "Speech Recognition Tool",
     "语音降噪": "Speech Denoising",
-    "语音降噪工具": "Speech Denoising Tool",
     "请上传3~10秒内参考音频，超过会报错！": "Please upload a reference audio within the 3-10 second range; if it exceeds this duration, it will raise errors.",
     "请上传参考音频": "Please Upload the Reference Audio",
     "请填入推理文本": "Please Fill in the Terget Text",
@@ -187,7 +197,8 @@
     "进度": "Progress",
     "进程已终止": " Process Terminated",
     "进程输出信息": " Process Output Information",
-    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的一个是底模，体验5秒Zero Shot TTS用。": "Choose the models from SoVITS_weights and GPT_weights. The default one is a pretrain, so you can experience zero shot TTS.",
+    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的几个是底模，体验5秒Zero Shot TTS不训练推理用。": "Select the model from SoVITS_weights and GPT_weights. The default models are pretrained models for experiencing 5-second Zero-Shot TTS without training.",
+    "采样步数(仅对V3/4生效)": "Sampling Steps (V3/V4 Only)",
     "采样步数,如果觉得电,提高试试,如果觉得慢,降低试试": "Sampling Steps: If feel noisy, try increasing, if feel slow, try decreasing",
     "重复惩罚": "Repetition Penalty",
     "随机种子": "Random Seed",
@@ -203,9 +214,13 @@
     "音频标注WebUI": "Audio Labeling WebUI",
     "音频自动切分输入路径，可文件可文件夹": "Audio slicer input (file or folder)",
     "音频超分中": "Running Audio Super-Resolution",
+    "音频超采样": "Audio Upsampling",
+    "音频超采样(仅对V3生效))": "Audio Upsampling (V3 Only)",
+    "预测语义Token": "Predict Semantic Token",
     "预训练GPT模型路径": "Pretrained GPT Model Path",
     "预训练SSL模型路径": "Pretrained SSL Model Path",
     "预训练SoVITS-D模型路径": "Pretrained SoVITS-D Model Path",
     "预训练SoVITS-G模型路径": "Pretrained SoVITS-G Model Path",
-    "预训练中文BERT模型路径": "Pretrained Chinese BERT Model Path"
+    "预训练中文BERT模型路径": "Pretrained Chinese BERT Model Path",
+    "预训练模型路径": "Pretrained Model Path"
 }
