--- a/GPT_SoVITS/tools/i18n/locale/es_ES.json
+++ b/GPT_SoVITS/tools/i18n/locale/es_ES.json
@@ -18,6 +18,7 @@
     "ASR 模型": "Modelo ASR",
     "ASR 模型尺寸": "Tamaño del modelo ASR",
     "ASR 语言设置": "Configuración del idioma ASR",
+    "CPU训练,较慢": "Entrenamiento en CPU, más lento",
     "GPT 训练: 模型权重文件在 GPT_weights/": "Entrenamiento de GPT: los archivos de pesos del modelo están en GPT_weights/",
     "GPT模型列表": "Lista de modelos GPT",
     "GPT训练": "Entrenamiento de GPT",
@@ -25,12 +26,13 @@
     "GPU卡号,只能填1个整数": "Número de tarjeta GPU, solo se puede ingresar un número entero",
     "GPU卡号以-分割，每个卡号一个进程": "Número de tarjeta GPU separado por '-', cada número de tarjeta es un proceso",
     "LoRA秩": "Rango de LoRA",
-    "SoVITS V3 底模缺失，无法加载相应 LoRA 权重": "Falta el modelo base de SoVITS V3, no se pueden cargar los pesos de LoRA correspondientes",
     "SoVITS 训练: 模型权重文件在 SoVITS_weights/": "Entrenamiento de SoVITS: los archivos de pesos del modelo están en SoVITS_weights/",
     "SoVITS模型列表": "Lista de modelos SoVITS",
     "SoVITS训练": "Entrenamiento de SoVITS",
+    "Submit Text: 将当前页所有文本框内容手工保存到内存和文件(翻页前后或者退出标注页面前如果没点这个按钮，你再翻回来就回滚了，白忙活。)": "Enviar texto: Guarda manualmente el contenido de todos los campos de texto en la página actual en memoria y archivo (si no haces clic en este botón antes o después de cambiar de página o salir de la página de etiquetado, al regresar se desharán los cambios, ¡todo ese trabajo se perderá!).",
     "TTS推理WebUI": "WebUI de inferencia TTS",
     "UVR5人声伴奏分离&去混响去延迟工具": "Herramienta de separación de voz y acompañamiento UVR5 y eliminación de reverberación y retardo",
+    "V3不支持无参考文本模式，请填写参考文本！": "¡V3 no admite el modo sin texto de referencia! Por favor, introduce el texto de referencia.",
     "alpha_mix:混多少比例归一化后音频进来": "alpha_mix: proporción de mezcla de audio normalizado que entra",
     "batch_size": "Tamaño de lote",
     "hop_size:怎么算音量曲线，越小精度越大计算量越高（不是精度越大效果越好）": "hop_size: cómo calcular la curva de volumen, cuanto más pequeño, mayor precisión pero mayor carga computacional (mayor precisión no significa mejor rendimiento)",
@@ -45,8 +47,11 @@
     "v3暂不支持该模式，使用了会报错。": "v3 no es compatible con este modo actualmente y su uso generará un error.",
     "v3输出如果觉得闷可以试试开超分": "Si la salida de V3 parece aburrida, puedes intentar activar la superresolución",
     "不切": "No cortar",
+    "不训练直接推v2ProPlus底模！": "¡Usar directamente el modelo base v2ProPlus sin entrenar!",
+    "不训练直接推v2Pro底模！": "¡Usar directamente el modelo base v2Pro sin entrenar!",
+    "不训练直接推v2底模！": "¡Usar directamente el modelo base v2 sin entrenar!",
+    "不训练直接推v3底模！": "¡Usar directamente el modelo base v3 sin entrenar!",
     "中文": "Chino",
-    "中文教程文档": "Documentación del tutorial en chino",
     "中英混合": "Chino e inglés mezclados",
     "主参考音频(请上传3~10秒内参考音频，超过会报错！)": "Audio de referencia principal (Por favor, suba un audio de referencia de entre 3 y 10 segundos, si supera este límite se producirá un error)",
     "主参考音频的文本": "Texto del audio de referencia principal",
@@ -87,6 +92,7 @@
     "句间停顿秒数": "Segundos de pausa entre frases",
     "可选项：通过拖拽多个文件上传多个参考音频（建议同性），平均融合他们的音色。如不填写此项，音色由左侧单个参考音频控制。如是微调模型，建议参考音频全部在微调训练集音色内，底模不用管。": "Opcional: Sube varios archivos de audio de referencia arrastrándolos y soltándolos (se recomienda que sean del mismo género) y promedia sus tonos. Si esta opción se deja en blanco, el tono será controlado por el único audio de referencia a la izquierda. Si se está afinando el modelo, se recomienda que todos los archivos de audio de referencia tengan tonos dentro del conjunto de entrenamiento de ajuste fino; se puede ignorar el modelo preentrenado.",
     "合成语音": "Síntesis de voz",
+    "合成音频": "Sintetizar Audio",
     "合格的文件夹路径格式举例： E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例(去文件管理器地址栏拷就行了)。": "Ejemplo de formato de ruta de carpeta válida: E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例 (simplemente copie desde la barra de direcciones del administrador de archivos).",
     "后续将支持转音素、手工修改音素、语音合成分步执行。": "Se añadirá soporte para conversión de fonemas, edición manual de fonemas y síntesis de voz por pasos en el futuro.",
     "听不清参考音频说的啥(不晓得写啥)可以开。开启后无视填写的参考文本。": "Si el audio de referencia no es claro o no sabe qué escribir, habilite esta opción para ignorar el texto de referencia.",
@@ -104,11 +110,15 @@
     "已关闭": " Desactivado",
     "已完成": " Completado",
     "已开启": " Activado",
+    "并行合成中": "Síntesis en paralelo en curso",
     "并行推理": "Inferencia paralela",
     "并行推理模式已关闭": "Modo de inferencia paralela deshabilitado",
     "并行推理模式已开启": "Modo de inferencia paralela habilitado",
+    "底模缺失，无法加载相应 LoRA 权重": "Falta el modelo base, no se pueden cargar los pesos de LoRA correspondientes",
     "开启": "Activar ",
     "开启无参考文本模式。不填参考文本亦相当于开启。": "Habilitar el modo sin texto de referencia. No llenar el texto de referencia también lo habilita.",
+    "当开启并行推理模式时，SoVits V3/4模型不支持分桶处理，已自动关闭分桶处理": "Al activar el modo de inferencia paralela, los modelos SoVITS V3/4 no admiten el procesamiento por lotes, por lo que este ha sido desactivado automáticamente.",
+    "微调模型信息": "Información del modelo fine-tuned",
     "微调训练": "Entrenamiento de ajuste fino",
     "怎么切": "Cómo cortar",
     "总训练轮数total_epoch": "Número total de épocas de entrenamiento",
@@ -140,8 +150,8 @@
     "模型": "Modelo",
     "模型分为三类：": "Los modelos se dividen en tres categorías:",
     "模型切换": "Cambio de modelo",
+    "模型加载中，请等待": "El modelo se está cargando, por favor espera...",
     "每张显卡的batch_size": "Tamaño de lote por tarjeta gráfica",
-    "版本": "Versión",
     "粤英混合": "Mezcla Cantonés-Inglés",
     "粤语": "Cantonés",
     "终止合成": "Terminar síntesis",
@@ -150,6 +160,7 @@
     "缺少音素数据集": "Falta el Conjunto de Datos de Fonemas",
     "缺少音频数据集": "Falta el Conjunto de Datos de Audio",
     "英文": "Inglés",
+    "训练模型的版本": "Versión del modelo entrenado",
     "训练集格式化一键三连": "Formato del conjunto de entrenamiento en un solo paso",
     "训练集格式化工具": "Herramienta de formateo del conjunto de datos de entrenamiento",
     "语义Token提取": "Extracción de tokens semánticos",
@@ -163,7 +174,6 @@
     "语音识别": "Reconocimiento de voz",
     "语音识别工具": "Herramienta de reconocimiento de voz",
     "语音降噪": "Reducción de ruido en la voz",
-    "语音降噪工具": "Herramienta de reducción de ruido de voz",
     "请上传3~10秒内参考音频，超过会报错！": "Por favor, suba un audio de referencia de entre 3 y 10 segundos, ¡más de eso causará un error!",
     "请上传参考音频": "Por Favor, Suba el Audio de Referencia",
     "请填入推理文本": "Por Favor, Ingrese el Texto Objetivo",
@@ -187,7 +197,8 @@
     "进度": "Progreso",
     "进程已终止": " Proceso terminado",
     "进程输出信息": " Información de salida del proceso",
-    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的一个是底模，体验5秒Zero Shot TTS用。": "Seleccione el modelo almacenado en SoVITS_weights y GPT_weights después del entrenamiento. Uno de ellos es el modelo base, útil para experimentar con TTS de 5 segundos sin entrenamiento.",
+    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的几个是底模，体验5秒Zero Shot TTS不训练推理用。": "Seleccione los modelos guardados en SoVITS_weights y GPT_weights después del entrenamiento. Los predeterminados son modelos base para experimentar con inferencia Zero Shot TTS de 5 segundos sin entrenamiento.",
+    "采样步数(仅对V3/4生效)": "Pasos de muestreo (solo efectivo para V3/4)",
     "采样步数,如果觉得电,提高试试,如果觉得慢,降低试试": "Pasos de muestreo: si se siente ruidoso, intente aumentarlo; si es lento, intente reducirlo",
     "重复惩罚": "Penalización por repetición",
     "随机种子": "Semilla aleatoria",
@@ -203,9 +214,13 @@
     "音频标注WebUI": "WebUI de etiquetado de audio",
     "音频自动切分输入路径，可文件可文件夹": "Ruta de entrada para la división automática de audio, puede ser un archivo o una carpeta",
     "音频超分中": "Superresolución de audio en proceso",
+    "音频超采样": "Muestreo superior del audio",
+    "音频超采样(仅对V3生效))": "Muestreo superior del audio (solo efectivo para V3)",
+    "预测语义Token": "Predecir token semántico",
     "预训练GPT模型路径": "Ruta del modelo GPT preentrenado",
     "预训练SSL模型路径": "Ruta del modelo SSL preentrenado",
     "预训练SoVITS-D模型路径": "Ruta del modelo SoVITS-D preentrenado",
     "预训练SoVITS-G模型路径": "Ruta del modelo SoVITS-G preentrenado",
-    "预训练中文BERT模型路径": "Ruta del modelo BERT en Chino preentrenado"
+    "预训练中文BERT模型路径": "Ruta del modelo BERT Chino Preentrenado",
+    "预训练模型路径": "Ruta del modelo preentrenado"
 }
