--- a/GPT_SoVITS/tools/i18n/locale/fr_FR.json
+++ b/GPT_SoVITS/tools/i18n/locale/fr_FR.json
@@ -18,6 +18,7 @@
     "ASR 模型": "Modèle ASR",
     "ASR 模型尺寸": "Taille du modèle ASR",
     "ASR 语言设置": "Paramètres de langue ASR",
+    "CPU训练,较慢": "Entraînement sur CPU, plus lent",
     "GPT 训练: 模型权重文件在 GPT_weights/": "Entraînement GPT : les poids du modèle sont dans GPT_weights/",
     "GPT模型列表": "Liste des modèles GPT",
     "GPT训练": "Entraînement GPT",
@@ -25,12 +26,13 @@
     "GPU卡号,只能填1个整数": "Numéro de carte GPU, ne peut contenir qu'un seul entier",
     "GPU卡号以-分割，每个卡号一个进程": "Numéro de carte GPU séparé par des tirets, un processus par numéro de carte",
     "LoRA秩": "Rang LoRA",
-    "SoVITS V3 底模缺失，无法加载相应 LoRA 权重": "Modèle de base SoVITS V3 manquant, impossible de charger les poids LoRA correspondants",
     "SoVITS 训练: 模型权重文件在 SoVITS_weights/": "Entraînement SoVITS : les poids du modèle sont dans SoVITS_weights/",
     "SoVITS模型列表": "Liste des modèles SoVITS",
     "SoVITS训练": "Entraînement SoVITS",
+    "Submit Text: 将当前页所有文本框内容手工保存到内存和文件(翻页前后或者退出标注页面前如果没点这个按钮，你再翻回来就回滚了，白忙活。)": "Soumettre le texte : Enregistrez manuellement le contenu de tous les champs textuels de la page actuelle en mémoire et dans un fichier (si vous ne cliquez pas sur ce bouton avant ou après avoir changé de page, ou avant de quitter la page d'étiquetage, vos modifications seront annulées lorsque vous reviendrez, tout votre travail sera perdu).",
     "TTS推理WebUI": "Interface Web d'inférence TTS",
     "UVR5人声伴奏分离&去混响去延迟工具": "Outil UVR5 de séparation voix/accompagnement & suppression de réverbération et de latence",
+    "V3不支持无参考文本模式，请填写参考文本！": "La version V3 ne prend pas en charge le mode sans texte de référence. Veuillez fournir un texte de référence !",
     "alpha_mix:混多少比例归一化后音频进来": "alpha_mix: proportion d'audio normalisé mélangé",
     "batch_size": "Taille de lot",
     "hop_size:怎么算音量曲线，越小精度越大计算量越高（不是精度越大效果越好）": "hop_size: comment calculer la courbe de volume, plus petit pour une précision plus élevée mais une charge de calcul plus élevée (ce n'est pas une meilleure précision)",
@@ -45,8 +47,11 @@
     "v3暂不支持该模式，使用了会报错。": "Le mode n'est pas encore supporté par la v3. Une erreur se produira en cas d'utilisation.",
     "v3输出如果觉得闷可以试试开超分": "Si la sortie v3 semble étouffée, essayez l'upscaling",
     "不切": "Pas de découpe",
+    "不训练直接推v2ProPlus底模！": "Utiliser directement le modèle de base v2ProPlus sans entraînement !",
+    "不训练直接推v2Pro底模！": "Utiliser directement le modèle de base v2Pro sans entraînement !",
+    "不训练直接推v2底模！": "Utiliser directement le modèle de base v2 sans entraînement !",
+    "不训练直接推v3底模！": "Utiliser directement le modèle de base v3 sans entraînement !",
     "中文": "Chinois",
-    "中文教程文档": "Documentation du tutoriel en chinois",
     "中英混合": "Mélange de chinois et d'anglais",
     "主参考音频(请上传3~10秒内参考音频，超过会报错！)": "Audio de référence principal (Veuillez télécharger un audio de référence entre 3 et 10 secondes, dépasser cette limite entraînera une erreur !)",
     "主参考音频的文本": "Texte de l’audio de référence principal",
@@ -87,6 +92,7 @@
     "句间停顿秒数": "Temps de pause entre les phrases (secondes)",
     "可选项：通过拖拽多个文件上传多个参考音频（建议同性），平均融合他们的音色。如不填写此项，音色由左侧单个参考音频控制。如是微调模型，建议参考音频全部在微调训练集音色内，底模不用管。": "Optionnel : Téléchargez plusieurs fichiers audio de référence en les faisant glisser (recommandé d'être du même genre) et fusionnez leur tonalité. Si cette option est laissée vide, la tonalité sera contrôlée par l'unique fichier audio de référence à gauche. Si vous ajustez le modèle, il est recommandé que tous les fichiers audio de référence aient des tonalités dans l'ensemble d'entraînement d'ajustement ; le modèle pré-entrainé peut être ignoré.",
     "合成语音": "Synthèse vocale",
+    "合成音频": "Synthétiser l'audio",
     "合格的文件夹路径格式举例： E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例(去文件管理器地址栏拷就行了)。": "Exemple de format de chemin de dossier valide : E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例 (copiez-le depuis la barre d'adresse de l'explorateur de fichiers).",
     "后续将支持转音素、手工修改音素、语音合成分步执行。": "Le support pour la conversion phonémique, l’édition manuelle des phonèmes et la synthèse vocale par étapes sera ajouté ultérieurement.",
     "听不清参考音频说的啥(不晓得写啥)可以开。开启后无视填写的参考文本。": "Si vous ne comprenez pas bien l'audio de référence (vous ne savez pas quoi écrire), vous pouvez activer cette option. Une fois activée, le texte de référence sera ignoré.",
@@ -104,11 +110,15 @@
     "已关闭": " Fermé",
     "已完成": " Terminé",
     "已开启": " Activé",
+    "并行合成中": "Synthèse parallèle en cours",
     "并行推理": "Inférence parallèle",
     "并行推理模式已关闭": "Mode d’inférence parallèle désactivé",
     "并行推理模式已开启": "Mode d’inférence parallèle activé",
+    "底模缺失，无法加载相应 LoRA 权重": "Modèle de base manquant, impossible de charger les poids LoRA correspondants",
     "开启": "Activer ",
     "开启无参考文本模式。不填参考文本亦相当于开启。": "Activer le mode sans texte de référence. Laisser le texte de référence vide équivaut également à activer le mode.",
+    "当开启并行推理模式时，SoVits V3/4模型不支持分桶处理，已自动关闭分桶处理": "Lorsque le mode d'inférence parallèle est activé, les modèles SoVITS V3/4 ne prennent pas en charge le traitement par lots, qui a donc été désactivé automatiquement.",
+    "微调模型信息": "Informations sur le modèle affiné",
     "微调训练": "Entraînement de fine-tuning",
     "怎么切": "Comment découper",
     "总训练轮数total_epoch": "Nombre total d'époques d'entraînement",
@@ -140,8 +150,8 @@
     "模型": "Modèle",
     "模型分为三类：": "Les modèles sont classés en trois catégories:",
     "模型切换": "Changement de modèle",
+    "模型加载中，请等待": "Le modèle est en cours de chargement, veuillez patienter...",
     "每张显卡的batch_size": "Taille de lot par carte graphique",
-    "版本": "Version",
     "粤英混合": "Mélange Cantonais-Anglais",
     "粤语": "Cantonais",
     "终止合成": "Terminer la synthèse",
@@ -150,6 +160,7 @@
     "缺少音素数据集": "Jeu de Données de Phonèmes Manquant",
     "缺少音频数据集": "Jeu de Données Audio Manquant",
     "英文": "Anglais",
+    "训练模型的版本": "Version du modèle entraîné",
     "训练集格式化一键三连": "Formatage de l'ensemble d'entraînement en un clic",
     "训练集格式化工具": "Outil de formatage des ensembles d'entraînement",
     "语义Token提取": "Extraction de tokens sémantiques",
@@ -163,7 +174,6 @@
     "语音识别": "Reconnaissance vocale",
     "语音识别工具": "Outil de reconnaissance vocale",
     "语音降噪": "Réduction du bruit audio",
-    "语音降噪工具": "Outil de réduction du bruit audio",
     "请上传3~10秒内参考音频，超过会报错！": "Veuillez télécharger une référence audio de 3 à 10 secondes ; les fichiers plus longs généreront une erreur!",
     "请上传参考音频": "Veuillez télécharger l'audio de référence",
     "请填入推理文本": "Veuillez remplir le texte cible",
@@ -187,7 +197,8 @@
     "进度": "Progression",
     "进程已终止": " Processus terminé",
     "进程输出信息": " Sortie du processus",
-    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的一个是底模，体验5秒Zero Shot TTS用。": "Choisissez le modèle entraîné stocké sous SoVITS_weights et GPT_weights. Par défaut, l'un d'eux est un modèle de base pour l'expérience de TTS Zero Shot de 5 secondes.",
+    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的几个是底模，体验5秒Zero Shot TTS不训练推理用。": "Sélectionnez les modèles entraînés stockés dans SoVITS_weights et GPT_weights. Par défaut, certains sont des modèles de base pour l'inférence Zero Shot TTS en 5 secondes sans entraînement.",
+    "采样步数(仅对V3/4生效)": "Nombre d'étapes d'échantillonnage (uniquement effectif pour V3/4)",
     "采样步数,如果觉得电,提高试试,如果觉得慢,降低试试": "Nombre d’étapes d’échantillonnage : si le son est bruité, essayez d’augmenter, si c’est lent, essayez de réduire",
     "重复惩罚": "Pénalité de répétition",
     "随机种子": "Graine aléatoire",
@@ -202,10 +213,14 @@
     "音频文件不存在，跳过：": "Fichier audio introuvable, passage : ",
     "音频标注WebUI": "Interface Web d'annotation audio",
     "音频自动切分输入路径，可文件可文件夹": "Chemin d'entrée automatique de découpage audio, peut être un fichier ou un dossier",
-    "音频超分中": "Upscaling audio en cours",
+    "音频超分中": "Super-résolution audio en cours",
+    "音频超采样": "Suréchantillonnage audio",
+    "音频超采样(仅对V3生效))": "Suréchantillonnage audio (uniquement effectif pour V3)",
+    "预测语义Token": "Prédire le jeton sémantique",
     "预训练GPT模型路径": "Chemin du modèle GPT pré-entraîné",
     "预训练SSL模型路径": "Chemin du modèle SSL pré-entraîné",
     "预训练SoVITS-D模型路径": "Chemin du modèle SoVITS-D pré-entraîné",
     "预训练SoVITS-G模型路径": "Chemin du modèle SoVITS-G pré-entraîné",
-    "预训练中文BERT模型路径": "Chemin du modèle BERT chinois pré-entraîné"
+    "预训练中文BERT模型路径": "Chemin du modèle BERT chinois pré-entraîné",
+    "预训练模型路径": "Chemin du modèle pré-entraîné"
 }
