--- a/GPT_SoVITS/tools/i18n/locale/it_IT.json
+++ b/GPT_SoVITS/tools/i18n/locale/it_IT.json
@@ -18,6 +18,7 @@
     "ASR 模型": "Modello ASR",
     "ASR 模型尺寸": "Dimensioni del modello ASR",
     "ASR 语言设置": "Impostazioni linguistiche ASR",
+    "CPU训练,较慢": "Addestramento su CPU, più lento",
     "GPT 训练: 模型权重文件在 GPT_weights/": "Addestramento GPT: i pesi del modello sono in GPT_weights/",
     "GPT模型列表": "Elenco dei modelli GPT",
     "GPT训练": "Addestramento GPT",
@@ -25,12 +26,13 @@
     "GPU卡号,只能填1个整数": "Numero della scheda grafica, può essere inserito solo un numero intero",
     "GPU卡号以-分割，每个卡号一个进程": "Numero di GPU separati da '-'; ogni numero corrisponde a un processo",
     "LoRA秩": "Rango LoRA",
-    "SoVITS V3 底模缺失，无法加载相应 LoRA 权重": "Modello base SoVITS V3 mancante, impossibile caricare i pesi LoRA corrispondenti",
     "SoVITS 训练: 模型权重文件在 SoVITS_weights/": "Addestramento SoVITS: i pesi del modello sono in SoVITS_weights/",
     "SoVITS模型列表": "Elenco dei modelli SoVITS",
     "SoVITS训练": "Addestramento SoVITS",
+    "Submit Text: 将当前页所有文本框内容手工保存到内存和文件(翻页前后或者退出标注页面前如果没点这个按钮，你再翻回来就回滚了，白忙活。)": "Invia testo: Salva manualmente i contenuti di tutti i campi testuali della pagina corrente in memoria e su file (se non premi questo pulsante prima o dopo aver girato pagina oppure prima di uscire dalla pagina di annotazione, tornando indietro i dati saranno ripristinati e avrai lavorato invano).",
     "TTS推理WebUI": "Interfaccia Web per inferenza TTS",
     "UVR5人声伴奏分离&去混响去延迟工具": "Strumento UVR5 per separazione voce/accompagnamento & rimozione riverbero e latenza",
+    "V3不支持无参考文本模式，请填写参考文本！": "V3 non supporta la modalità senza testo di riferimento! Inserisci il testo di riferimento!",
     "alpha_mix:混多少比例归一化后音频进来": "alpha_mix: Quanta proporzione dell'audio normalizzato deve essere miscelata",
     "batch_size": "Dimensione del batch",
     "hop_size:怎么算音量曲线，越小精度越大计算量越高（不是精度越大效果越好）": "hop_size: Come calcolare la curva del volume. Più piccolo è, maggiore è la precisione ma aumenta la complessità computazionale (non significa che una maggiore precisione dà risultati migliori)",
@@ -45,8 +47,11 @@
     "v3暂不支持该模式，使用了会报错。": "V3 non supporta questa modalità, utilizzarla genererà un errore.",
     "v3输出如果觉得闷可以试试开超分": "Se l'output v3 sembra ovattato, prova ad attivare il super-risoluzione",
     "不切": "Nessuna suddivisione",
+    "不训练直接推v2ProPlus底模！": "Usa direttamente il modello base v2ProPlus senza addestramento!",
+    "不训练直接推v2Pro底模！": "Usa direttamente il modello base v2Pro senza addestramento!",
+    "不训练直接推v2底模！": "Usa direttamente il modello base v2 senza addestramento!",
+    "不训练直接推v3底模！": "Usa direttamente il modello base v3 senza addestramento!",
     "中文": "Cinese",
-    "中文教程文档": "Documentazione del tutorial in cinese",
     "中英混合": "Cinese e inglese misti",
     "主参考音频(请上传3~10秒内参考音频，超过会报错！)": "Audio di riferimento principale (Si prega di caricare un audio di riferimento tra 3 e 10 secondi, superato questo limite si verificherà un errore!)",
     "主参考音频的文本": "Testo dell'audio di riferimento principale",
@@ -87,6 +92,7 @@
     "句间停顿秒数": "Durata pausa tra le frasi (secondi)",
     "可选项：通过拖拽多个文件上传多个参考音频（建议同性），平均融合他们的音色。如不填写此项，音色由左侧单个参考音频控制。如是微调模型，建议参考音频全部在微调训练集音色内，底模不用管。": "Opzionale: Carica più file audio di riferimento trascinandoli (si consiglia dello stesso genere) e media il loro tono. Se questa opzione è lasciata vuota, il tono sarà controllato dal singolo file audio di riferimento a sinistra. Se si sta perfezionando il modello, è consigliato che tutti i file audio di riferimento abbiano toni presenti nel set di addestramento per il perfezionamento; il modello pre-addestrato può essere ignorato.",
     "合成语音": "Sintesi vocale",
+    "合成音频": "Sintesi audio",
     "合格的文件夹路径格式举例： E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例(去文件管理器地址栏拷就行了)。": "Formato di percorso della cartella valido: E:\\codes\\py39\\vits_vc_gpu\\Esempio di test di BaiLuShuangHua (copiare direttamente dalla barra degli indirizzi del gestore file).",
     "后续将支持转音素、手工修改音素、语音合成分步执行。": "In futuro verrà aggiunto il supporto per la conversione dei fonemi, la modifica manuale dei fonemi e la sintesi vocale passo dopo passo.",
     "听不清参考音频说的啥(不晓得写啥)可以开。开启后无视填写的参考文本。": "Se l'audio di riferimento non è chiaro o non sai cosa scrivere, abilita questa opzione per ignorare il testo di riferimento.",
@@ -104,11 +110,15 @@
     "已关闭": " Chiuso",
     "已完成": " Completato",
     "已开启": " Attivato",
+    "并行合成中": "Sintesi parallela in corso",
     "并行推理": "Inferenza parallela",
     "并行推理模式已关闭": "Modalità di inferenza parallela disabilitata",
     "并行推理模式已开启": "Modalità di inferenza parallela abilitata",
+    "底模缺失，无法加载相应 LoRA 权重": "Mancano il modello base, non è possibile caricare i pesi LoRA corrispondenti",
     "开启": "Attiva ",
     "开启无参考文本模式。不填参考文本亦相当于开启。": "Attivare la modalità senza testo di riferimento. Anche se non inserisci un testo di riferimento, la modalità verrà attivata.",
+    "当开启并行推理模式时，SoVits V3/4模型不支持分桶处理，已自动关闭分桶处理": "Quando la modalità di inferenza parallela è attiva, i modelli SoVITS V3/4 non supportano l'elaborazione suddivisa in gruppi e questa è stata automaticamente disattivata.",
+    "微调模型信息": "Informazioni sul modello raffinato",
     "微调训练": "Addestramento fine-tuning",
     "怎么切": "Come tagliare",
     "总训练轮数total_epoch": "Numero totale di epoche di addestramento",
@@ -140,8 +150,8 @@
     "模型": "Modello",
     "模型分为三类：": "I modelli sono divisi in tre categorie:",
     "模型切换": "Cambio del modello",
+    "模型加载中，请等待": "Il modello si sta caricando, attendere prego...",
     "每张显卡的batch_size": "Batch size per ogni scheda grafica",
-    "版本": "Versione",
     "粤英混合": "Misto Cantonese-Inglese",
     "粤语": "Cantonese",
     "终止合成": "Termina sintesi",
@@ -150,6 +160,7 @@
     "缺少音素数据集": "Dataset di Fonemi Mancante",
     "缺少音频数据集": "Dataset Audio Mancante",
     "英文": "Inglese",
+    "训练模型的版本": "Versione del modello addestrato",
     "训练集格式化一键三连": "Formattazione del dataset di addestramento in un clic",
     "训练集格式化工具": "Strumento di formattazione dataset",
     "语义Token提取": "Estrazione token semantici",
@@ -163,7 +174,6 @@
     "语音识别": "Riconoscimento vocale",
     "语音识别工具": "Strumento di riconoscimento vocale",
     "语音降噪": "Riduzione del rumore audio",
-    "语音降噪工具": "Strumento di riduzione del rumore audio",
     "请上传3~10秒内参考音频，超过会报错！": "Carica un audio di riferimento della durata compresa tra 3 e 10 secondi. Superiore a questo, verrà generato un errore!",
     "请上传参考音频": "Si prega di caricare l'audio di riferimento",
     "请填入推理文本": "Si prega di inserire il testo di destinazione",
@@ -187,7 +197,8 @@
     "进度": "Avanzamento",
     "进程已终止": " Processo terminato",
     "进程输出信息": " Output del processo",
-    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的一个是底模，体验5秒Zero Shot TTS用。": "Scegli il modello salvato in SoVITS_weights e GPT_weights dopo l'addestramento. Uno di default è il modello di base, utilizzato per l'esperienza di Zero Shot TTS in 5 secondi.",
+    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的几个是底模，体验5秒Zero Shot TTS不训练推理用。": "Seleziona i modelli addestrati salvati in SoVITS_weights e GPT_weights. Quelli predefiniti sono modelli base per sperimentare l'inferenza Zero Shot TTS in 5 secondi senza addestramento.",
+    "采样步数(仅对V3/4生效)": "Numero di passaggi di campionamento (valido solo per V3/4)",
     "采样步数,如果觉得电,提高试试,如果觉得慢,降低试试": "Passi di campionamento: se sembra rumoroso, prova a aumentarlo, se è lento, prova a diminuirlo",
     "重复惩罚": "Penalità di ripetizione",
     "随机种子": "Seme casuale",
@@ -203,9 +214,13 @@
     "音频标注WebUI": "Interfaccia Web per annotazione audio",
     "音频自动切分输入路径，可文件可文件夹": "Percorso di input per la segmentazione automatica dell'audio, può essere un file o una cartella",
     "音频超分中": "Super-risoluzione audio in corso",
+    "音频超采样": "Upsampling audio",
+    "音频超采样(仅对V3生效))": "Upsampling audio (valido solo per V3)",
+    "预测语义Token": "Predici token semantico",
     "预训练GPT模型路径": "Percorso del modello GPT pre-addestrato",
     "预训练SSL模型路径": "Percorso del modello SSL pre-addestrato",
     "预训练SoVITS-D模型路径": "Percorso del modello SoVITS-D pre-addestrato",
     "预训练SoVITS-G模型路径": "Percorso del modello SoVITS-G pre-addestrato",
-    "预训练中文BERT模型路径": "Percorso del modello BERT cinese pre-addestrato"
+    "预训练中文BERT模型路径": "Percorso del modello BERT cinese pre-addestrato",
+    "预训练模型路径": "Percorso del modello pre-addestrato"
 }
