--- a/GPT_SoVITS/tools/i18n/locale/ko_KR.json
+++ b/GPT_SoVITS/tools/i18n/locale/ko_KR.json
@@ -18,6 +18,7 @@
     "ASR 模型": "ASR 모델",
     "ASR 模型尺寸": "ASR 모델 크기",
     "ASR 语言设置": "ASR 언어 설정",
+    "CPU训练,较慢": "CPU 학습, 속도 느림",
     "GPT 训练: 模型权重文件在 GPT_weights/": "GPT 훈련: 모델 가중치 파일은 GPT_weights/에 있습니다",
     "GPT模型列表": "GPT 모델 목록",
     "GPT训练": "GPT훈련",
@@ -25,12 +26,13 @@
     "GPU卡号,只能填1个整数": "GPU 카드 번호, 1개의 정수만 입력 가능",
     "GPU卡号以-分割，每个卡号一个进程": "GPU 카드 번호는 -로 구분되며 각 카드 번호에 하나의 프로세스가 있어야 함",
     "LoRA秩": "LoRA 랭크",
-    "SoVITS V3 底模缺失，无法加载相应 LoRA 权重": "SoVITS V3 기본 모델이 없어서 해당 LoRA 가중치를 로드할 수 없습니다",
     "SoVITS 训练: 模型权重文件在 SoVITS_weights/": "SoVITS 훈련: 모델 가중치 파일은 SoVITS_weights/에 있습니다",
     "SoVITS模型列表": "SoVITS 모델 목록",
     "SoVITS训练": "SoVITS훈련",
+    "Submit Text: 将当前页所有文本框内容手工保存到内存和文件(翻页前后或者退出标注页面前如果没点这个按钮，你再翻回来就回滚了，白忙活。)": "현재 페이지의 모든 텍스트 상자 내용을 수동으로 메모리와 파일에 저장합니다. (페이지 전환 전후 또는 주석 작업을 종료하기 전에 이 버튼을 누르지 않으면, 다시 돌아왔을 때 변경 사항이 롤백되어 작업이 무효가 됩니다.)",
     "TTS推理WebUI": "TTS 추론 WebUI",
     "UVR5人声伴奏分离&去混响去延迟工具": "UVR5 보컬 및 반주 분리 & 리버브 제거 및 딜레이 제거 도구",
+    "V3不支持无参考文本模式，请填写参考文本！": "V3는 참조 텍스트 없이 작동할 수 없습니다. 반드시 참조 텍스트를 입력해주세요!",
     "alpha_mix:混多少比例归一化后音频进来": "알파 믹스: 정규화된 오디오가 들어오는 비율",
     "batch_size": "배치 크기",
     "hop_size:怎么算音量曲线，越小精度越大计算量越高（不是精度越大效果越好）": "hop 크기: 볼륨 곡선을 계산하는 방법. 작을수록 정확도가 높아지지만 계산량이 높아집니다 (정확도가 높다고 효과가 좋아지지 않음)",
@@ -45,8 +47,11 @@
     "v3暂不支持该模式，使用了会报错。": "v3에서는 이 모드를 지원하지 않으며, 사용 시 오류가 발생합니다.",
     "v3输出如果觉得闷可以试试开超分": "v3 출력이 답답하게 들리면 슈퍼 레졸루션을 켜보세요",
     "不切": "자르지 않음",
+    "不训练直接推v2ProPlus底模！": "학습 없이 바로 v2ProPlus 베이스 모델 사용!",
+    "不训练直接推v2Pro底模！": "학습 없이 바로 v2Pro 베이스 모델 사용!",
+    "不训练直接推v2底模！": "학습 없이 바로 v2 베이스 모델 사용!",
+    "不训练直接推v3底模！": "학습 없이 바로 v3 베이스 모델 사용!",
     "中文": "중국어",
-    "中文教程文档": "중국어 튜토리얼 문서",
     "中英混合": "중영 혼합",
     "主参考音频(请上传3~10秒内参考音频，超过会报错！)": "주 참조 오디오 (3~10초 이내의 참조 오디오를 업로드하세요. 초과 시 오류 발생!)",
     "主参考音频的文本": "주 참조 오디오의 텍스트",
@@ -87,6 +92,7 @@
     "句间停顿秒数": "문장 간 정지 시간 (초)",
     "可选项：通过拖拽多个文件上传多个参考音频（建议同性），平均融合他们的音色。如不填写此项，音色由左侧单个参考音频控制。如是微调模型，建议参考音频全部在微调训练集音色内，底模不用管。": "선택 사항: 여러 참조 오디오 파일을 드래그하여 업로드하고 (동일한 성별을 권장), 그들의 톤을 평균화합니다. 이 옵션을 비워두면 톤은 왼쪽의 단일 참조 오디오로 제어됩니다. 모델을 미세 조정하는 경우 모든 참조 오디오 파일이 미세 조정 훈련 세트 내의 톤을 가지고 있는 것이 좋으며, 사전 훈련된 모델은 무시할 수 있습니다.",
     "合成语音": "합성 음성",
+    "合成音频": "오디오 생성",
     "合格的文件夹路径格式举例： E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例(去文件管理器地址栏拷就行了)。": "적절한 폴더 경로 형식 예: E:\\codes\\py39\\vits_vc_gpu\\백로서리 테스트 샘플 (파일 관리자 주소 표시줄에서 복사하면 됩니다).",
     "后续将支持转音素、手工修改音素、语音合成分步执行。": "향후 음소 변환, 수동 음소 편집, 단계별 음성 합성 지원이 추가될 예정입니다.",
     "听不清参考音频说的啥(不晓得写啥)可以开。开启后无视填写的参考文本。": "참고 오디오의 내용을 정확히 알아들을 수 없을 경우 이 옵션을 활성화하세요. 활성화하면 입력한 참고 텍스트를 무시합니다.",
@@ -104,11 +110,15 @@
     "已关闭": "닫힘",
     "已完成": "완료됨",
     "已开启": "켜짐",
+    "并行合成中": "병렬 오디오 생성 중",
     "并行推理": "병렬 추론",
     "并行推理模式已关闭": "병렬 추론 모드 비활성화됨",
     "并行推理模式已开启": "병렬 추론 모드 활성화됨",
+    "底模缺失，无法加载相应 LoRA 权重": "기본 모델이 없어서 해당 LoRA 가중치를 로드할 수 없습니다",
     "开启": "켜기",
     "开启无参考文本模式。不填参考文本亦相当于开启。": "참고 텍스트 없이 모드를 활성화합니다. 참고 텍스트를 입력하지 않으면 자동으로 활성화됩니다.",
+    "当开启并行推理模式时，SoVits V3/4模型不支持分桶处理，已自动关闭分桶处理": "병렬 추론 모드가 활성화된 경우, SoVITS V3/4 모델은 버킷 처리를 지원하지 않으며, 자동으로 비활성화됩니다.",
+    "微调模型信息": "미세 조정(Fine-tuning) 모델 정보",
     "微调训练": "미세 조정 훈련",
     "怎么切": "자르기 옵션",
     "总训练轮数total_epoch": "총 훈련 라운드 수 (total_epoch)",
@@ -140,8 +150,8 @@
     "模型": "모델",
     "模型分为三类：": "모델은 3가지로 나뉩니다：",
     "模型切换": "모델 전환",
+    "模型加载中，请等待": "모델을 불러오는 중입니다. 잠시 기다려주세요...",
     "每张显卡的batch_size": "각 그래픽 카드의 배치 크기",
-    "版本": "버전",
     "粤英混合": "粤영 혼합",
     "粤语": "粤語",
     "终止合成": "합성 종료",
@@ -150,6 +160,7 @@
     "缺少音素数据集": "음소 데이터셋이 없습니다",
     "缺少音频数据集": "오디오 데이터셋이 없습니다",
     "英文": "영어",
+    "训练模型的版本": "학습된 모델 버전",
     "训练集格式化一键三连": "훈련 데이터셋 포맷팅 원클릭 실행",
     "训练集格式化工具": "훈련 데이터셋 포맷팅 도구",
     "语义Token提取": "의미론적 토큰 추출",
@@ -163,7 +174,6 @@
     "语音识别": "음성 인식",
     "语音识别工具": "음성 인식 도구",
     "语音降噪": "음성 잡음 제거",
-    "语音降噪工具": "음성 잡음 제거 도구",
     "请上传3~10秒内参考音频，超过会报错！": "3~10초 이내의 참고 오디오를 업로드하십시오. 초과하면 오류가 발생합니다!",
     "请上传参考音频": "참고 오디오를 업로드하세요",
     "请填入推理文本": "목표 텍스트를 입력하세요",
@@ -187,7 +197,8 @@
     "进度": "진행 상태",
     "进程已终止": "프로세스 종료됨",
     "进程输出信息": "프로세스 출력 정보",
-    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的一个是底模，体验5秒Zero Shot TTS用。": "SoVITS_weights 및 GPT_weights에 저장된 훈련 완료된 모델 중 선택. 기본적으로 하나는 기본 모델이며 5초 Zero Shot TTS를 체험할 수 있습니다.",
+    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的几个是底模，体验5秒Zero Shot TTS不训练推理用。": "SoVITS_weights와 GPT_weights에 저장된 학습 완료 모델을 선택하세요. 기본 제공되는 모델은 베이스 모델로, 5초 Zero Shot TTS 추론을 학습 없이 체험할 수 있습니다.",
+    "采样步数(仅对V3/4生效)": "샘플링 단계 수 (V3/V4에만 적용됨)",
     "采样步数,如果觉得电,提高试试,如果觉得慢,降低试试": "샘플링 스텝: 노이즈가 느껴지면 증가, 느리다면 감소 시도",
     "重复惩罚": "반복 패널티",
     "随机种子": "랜덤 시드",
@@ -202,10 +213,14 @@
     "音频文件不存在，跳过：": "오디오 파일이 존재하지 않음, 건너뜀: ",
     "音频标注WebUI": "오디오 주석 WebUI",
     "音频自动切分输入路径，可文件可文件夹": "오디오 자동 분리 입력 경로, 파일 또는 폴더 가능",
-    "音频超分中": "오디오 슈퍼 레졸루션 중",
-    "预训练GPT模型路径": "사전 훈련된 GPT 모델 경로",
-    "预训练SSL模型路径": "사전 훈련된 SSL 모델 경로",
-    "预训练SoVITS-D模型路径": "사전 훈련된 SoVITS-D 모델 경로",
-    "预训练SoVITS-G模型路径": "사전 훈련된 SoVITS-G 모델 경로",
-    "预训练中文BERT模型路径": "사전 훈련된 중국어 BERT 모델 경로"
+    "音频超分中": "오디오 슈퍼 레졸루션 처리 중",
+    "音频超采样": "오디오 업샘플링",
+    "音频超采样(仅对V3生效))": "오디오 업샘플링 (V3에만 적용됨)",
+    "预测语义Token": "의미 기반 토큰 예측",
+    "预训练GPT模型路径": "사전 학습된 GPT 모델 경로",
+    "预训练SSL模型路径": "사전 학습된 SSL 모델 경로",
+    "预训练SoVITS-D模型路径": "사전 학습된 SoVITS-D 모델 경로",
+    "预训练SoVITS-G模型路径": "사전 학습된 SoVITS-G 모델 경로",
+    "预训练中文BERT模型路径": "사전 학습된 중국어 BERT 모델 경로",
+    "预训练模型路径": "사전 학습 모델 경로"
 }
