--- a/GPT_SoVITS/tools/i18n/locale/pt_BR.json
+++ b/GPT_SoVITS/tools/i18n/locale/pt_BR.json
@@ -18,6 +18,7 @@
     "ASR 模型": "Modelo ASR",
     "ASR 模型尺寸": "Tamanho do modelo ASR",
     "ASR 语言设置": "Configurações de idioma do ASR",
+    "CPU训练,较慢": "Treinamento em CPU, mais lento",
     "GPT 训练: 模型权重文件在 GPT_weights/": "Treinamento GPT: O arquivo de pesos do modelo está em GPT_weights/",
     "GPT模型列表": "Lista de modelos GPT",
     "GPT训练": "Treinamento GPT",
@@ -25,12 +26,13 @@
     "GPU卡号,只能填1个整数": "Número da placa de vídeo, só é possível preencher com um número inteiro",
     "GPU卡号以-分割，每个卡号一个进程": "Número da placa de vídeo dividido por-, cada número de placa é um processo",
     "LoRA秩": "Classificação LoRA",
-    "SoVITS V3 底模缺失，无法加载相应 LoRA 权重": "O modelo base do SoVITS V3 está ausente, impossibilitando o carregamento dos pesos do LoRA",
     "SoVITS 训练: 模型权重文件在 SoVITS_weights/": "Treinamento SoVITS: O arquivo de pesos do modelo está em SoVITS_weights/",
     "SoVITS模型列表": "Lista de modelos SoVITS",
     "SoVITS训练": "Treinamento SoVITS",
+    "Submit Text: 将当前页所有文本框内容手工保存到内存和文件(翻页前后或者退出标注页面前如果没点这个按钮，你再翻回来就回滚了，白忙活。)": "Enviar texto: Salve manualmente o conteúdo de todos os campos de texto da página atual na memória e no arquivo. Se você não clicar neste botão antes ou depois de mudar de página ou sair da tela de anotação, ao retornar as alterações serão desfeitas e todo o trabalho será perdido.",
     "TTS推理WebUI": "Inferência TTS WebUI",
     "UVR5人声伴奏分离&去混响去延迟工具": "UVR5 Separação de voz e acompanhamento & remoção de reverberação e atraso",
+    "V3不支持无参考文本模式，请填写参考文本！": "O modo sem texto de referência não é suportado pelo V3. Por favor, forneça um texto de referência!",
     "alpha_mix:混多少比例归一化后音频进来": "alpha_mix: Em que proporção o áudio normalizado é misturado de volta",
     "batch_size": "Tamanho do Lote",
     "hop_size:怎么算音量曲线，越小精度越大计算量越高（不是精度越大效果越好）": "HOP_SIZE: Como calcular a curva de volume, quanto menor a precisão, maior a quantidade de cálculos (não significa que quanto maior a precisão, melhor o efeito)",
@@ -45,8 +47,11 @@
     "v3暂不支持该模式，使用了会报错。": "O v3 não suporta este modo no momento. O uso resultará em erro.",
     "v3输出如果觉得闷可以试试开超分": "Se a saída do v3 parecer abafada, tente ativar a super-resolução",
     "不切": "Não dividir",
+    "不训练直接推v2ProPlus底模！": "Usar diretamente o modelo base v2ProPlus sem treinamento!",
+    "不训练直接推v2Pro底模！": "Usar diretamente o modelo base v2Pro sem treinamento!",
+    "不训练直接推v2底模！": "Usar diretamente o modelo base v2 sem treinamento!",
+    "不训练直接推v3底模！": "Usar diretamente o modelo base v3 sem treinamento!",
     "中文": "Chinês",
-    "中文教程文档": "Documentação do tutorial em chinês",
     "中英混合": "Mistura de Chinês e Inglês",
     "主参考音频(请上传3~10秒内参考音频，超过会报错！)": "Áudio de Referência Principal (Por favor, carregue um áudio de referência entre 3-10 segundos, exceder esse limite causará um erro!)",
     "主参考音频的文本": "Texto do Áudio de Referência Principal",
@@ -87,6 +92,7 @@
     "句间停顿秒数": "Tempo de pausa entre frases (segundos)",
     "可选项：通过拖拽多个文件上传多个参考音频（建议同性），平均融合他们的音色。如不填写此项，音色由左侧单个参考音频控制。如是微调模型，建议参考音频全部在微调训练集音色内，底模不用管。": "Opcional: Faça upload de vários arquivos de áudio de referência arrastando e soltando-os (recomendado que sejam do mesmo gênero) e faça uma média dos seus tons. Se essa opção for deixada em branco, o tom será controlado pelo único áudio de referência à esquerda. Se estiver ajustando o modelo, é recomendado que todos os arquivos de áudio de referência tenham tons dentro do conjunto de treinamento de ajuste; o modelo pré-treinado pode ser ignorado.",
     "合成语音": "Voz sintetizada",
+    "合成音频": "Sintetizar áudio",
     "合格的文件夹路径格式举例： E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例(去文件管理器地址栏拷就行了)。": "Exemplo de formato de caminho de pasta válido: E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例 (copie do endereço da barra do gerenciador de arquivos).",
     "后续将支持转音素、手工修改音素、语音合成分步执行。": "Suporte para Conversão de Fonemas, Edição Manual de Fonemas e Síntese de Fase por Fase será adicionado no futuro.",
     "听不清参考音频说的啥(不晓得写啥)可以开。开启后无视填写的参考文本。": "Se não conseguir entender claramente o áudio de referência, ative esta opção. Quando ativada, o texto de referência inserido será ignorado.",
@@ -104,11 +110,15 @@
     "已关闭": " Fechado",
     "已完成": " Concluído",
     "已开启": " Ativado",
+    "并行合成中": "Síntese em paralelo em andamento",
     "并行推理": "Inferência Paralela",
     "并行推理模式已关闭": "Modo de Inferência Paralela Desativado",
     "并行推理模式已开启": "Modo de Inferência Paralela Ativado",
+    "底模缺失，无法加载相应 LoRA 权重": "Falta o modelo base, não foi possível carregar os pesos LoRA correspondentes",
     "开启": "Ativar ",
     "开启无参考文本模式。不填参考文本亦相当于开启。": "Ativar o modo sem texto de referência. Não preencher o texto de referência também equivale a ativar.",
+    "当开启并行推理模式时，SoVits V3/4模型不支持分桶处理，已自动关闭分桶处理": "Quando o modo de inferência paralela está ativado, os modelos SoVITS V3/4 não suportam processamento por lotes e esta funcionalidade foi automaticamente desativada.",
+    "微调模型信息": "Informações do modelo ajustado",
     "微调训练": "Treinamento de ajuste fino",
     "怎么切": "Como cortar",
     "总训练轮数total_epoch": "Total de epoch de treinamento",
@@ -140,8 +150,8 @@
     "模型": "Modelo",
     "模型分为三类：": "Modelos dividem-se em três categorias:",
     "模型切换": "Troca de modelo",
+    "模型加载中，请等待": "Carregando o modelo, por favor aguarde...",
     "每张显卡的batch_size": "Tamanho do lote de cada placa de vídeo",
-    "版本": "Versão",
     "粤英混合": "Mistura Yue-Inglês",
     "粤语": "Yue",
     "终止合成": "Terminar Síntese",
@@ -150,6 +160,7 @@
     "缺少音素数据集": "Conjunto de Dados de Fonemas Ausente",
     "缺少音频数据集": "Conjunto de Dados de Áudio Ausente",
     "英文": "Inglês",
+    "训练模型的版本": "Versão do modelo treinado",
     "训练集格式化一键三连": "Formatação do conjunto de treinamento em um clique",
     "训练集格式化工具": "Ferramenta de formatação do conjunto de treinamento",
     "语义Token提取": "Extração de tokens semânticos",
@@ -163,7 +174,6 @@
     "语音识别": "Reconhecimento de voz",
     "语音识别工具": "Ferramenta de reconhecimento de voz",
     "语音降噪": "Redução de ruído de áudio",
-    "语音降噪工具": "Ferramenta de redução de ruído de áudio",
     "请上传3~10秒内参考音频，超过会报错！": "Por favor, faça upload de um áudio de referência com duração entre 3 e 10 segundos. Áudios fora dessa faixa causarão erro!",
     "请上传参考音频": "Por Favor, Carregue o Áudio de Referência",
     "请填入推理文本": "Por Favor, Preencha o Texto de Inferência",
@@ -187,7 +197,8 @@
     "进度": "Progresso",
     "进程已终止": " Processo encerrado",
     "进程输出信息": " Informações de saída do processo",
-    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的一个是底模，体验5秒Zero Shot TTS用。": "Selecione os modelos armazenados em Sovits_weights e GPT_WEIGHTS. O padrão é o modelo inferior, experiência para 5 segundos de Zero Shot TTS",
+    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的几个是底模，体验5秒Zero Shot TTS不训练推理用。": "Selecione os modelos treinados armazenados em SoVITS_weights e GPT_weights. Os padrões são modelos base para experimentar inferência Zero Shot TTS de 5 segundos sem treinamento.",
+    "采样步数(仅对V3/4生效)": "Número de passos de amostragem (apenas válido para V3/4)",
     "采样步数,如果觉得电,提高试试,如果觉得慢,降低试试": "Passos de Amostragem: Se parecer ruidoso, tente aumentar; se parecer lento, tente diminuir",
     "重复惩罚": "Penalidade de Repetição",
     "随机种子": "Semente Aleatória",
@@ -199,13 +210,17 @@
     "韩文": "Coreano",
     "韩英混合": "Mistura Coreano-Inglês",
     "音频加载失败": "Falha ao Carregar o Áudio",
-    "音频文件不存在，跳过：": "Arquivo de Áudio Não Encontrado, Pulando: ",
-    "音频标注WebUI": "WebUI de anotação de áudio",
-    "音频自动切分输入路径，可文件可文件夹": "Caminho de entrada automático de corte de áudio, pode ser um arquivo ou uma pasta",
-    "音频超分中": "Super-resolução de áudio em andamento",
+    "音频文件不存在，跳过：": "Arquivo de áudio não encontrado, pulando: ",
+    "音频标注WebUI": "WebUI de Anotação de Áudio",
+    "音频自动切分输入路径，可文件可文件夹": "Caminho de entrada para divisão automática de áudio (arquivo ou pasta)",
+    "音频超分中": "Executando Super-Resolução de Áudio",
+    "音频超采样": "Superamostragem de áudio",
+    "音频超采样(仅对V3生效))": "Superamostragem de áudio (apenas válida para V3)",
+    "预测语义Token": "Prever token semântico",
     "预训练GPT模型路径": "Caminho do modelo GPT pré-treinado",
     "预训练SSL模型路径": "Caminho do modelo SSL pré-treinado",
     "预训练SoVITS-D模型路径": "Caminho do modelo SoVITS-D pré-treinado",
     "预训练SoVITS-G模型路径": "Caminho do modelo SoVITS-G pré-treinado",
-    "预训练中文BERT模型路径": "Caminho do modelo BERT chinês pré-treinado"
+    "预训练中文BERT模型路径": "Caminho do modelo BERT chinês pré-treinado",
+    "预训练模型路径": "Caminho do modelo pré-treinado"
 }
