--- a/GPT_SoVITS/tools/i18n/locale/ru_RU.json
+++ b/GPT_SoVITS/tools/i18n/locale/ru_RU.json
@@ -18,6 +18,7 @@
     "ASR 模型": "Модель ASR",
     "ASR 模型尺寸": "Размер модели ASR",
     "ASR 语言设置": "Настройки языка ASR",
+    "CPU训练,较慢": "Обучение на CPU (медленнее)",
     "GPT 训练: 模型权重文件在 GPT_weights/": "Обучение GPT: файлы весов модели находятся в GPT_weights/",
     "GPT模型列表": "Список моделей GPT",
     "GPT训练": "Обучение GPT",
@@ -25,12 +26,13 @@
     "GPU卡号,只能填1个整数": "Номер GPU, можно указать только одно целое число",
     "GPU卡号以-分割，每个卡号一个进程": "Номера GPU разделяются дефисом, на каждый номер отдельный процесс",
     "LoRA秩": "Ранг LoRA",
-    "SoVITS V3 底模缺失，无法加载相应 LoRA 权重": "Отсутствует базовая модель SoVITS V3, невозможно загрузить соответствующие веса LoRA",
     "SoVITS 训练: 模型权重文件在 SoVITS_weights/": "Обучение SoVITS: файлы весов модели находятся в SoVITS_weights/",
     "SoVITS模型列表": "Список моделей SoVITS",
     "SoVITS训练": "Обучение SoVITS",
+    "Submit Text: 将当前页所有文本框内容手工保存到内存和文件(翻页前后或者退出标注页面前如果没点这个按钮，你再翻回来就回滚了，白忙活。)": "Отправить текст: Вручную сохраните содержимое всех текстовых полей текущей страницы в память и файл. Если вы не нажмете эту кнопку до или после смены страницы или перед выходом из интерфейса разметки, при возврате все изменения будут отменены — работа пропадет зря.",
     "TTS推理WebUI": "TTS WebUI для инференса",
     "UVR5人声伴奏分离&去混响去延迟工具": "UVR5 Инструмент разделения вокала и сопровождения & удаления реверберации и задержки",
+    "V3不支持无参考文本模式，请填写参考文本！": "V3 не поддерживает режим без опорного текста. Пожалуйста, укажите опорный текст!",
     "alpha_mix:混多少比例归一化后音频进来": "alpha_mix:Какая доля нормализованного аудио смешивается",
     "batch_size": "размер пакета",
     "hop_size:怎么算音量曲线，越小精度越大计算量越高（不是精度越大效果越好）": "hop_size:Как рассчитывается кривая громкости, чем меньше, тем выше точность и больше вычислительная нагрузка (большая точность не всегда означает лучший результат)",
@@ -45,8 +47,11 @@
     "v3暂不支持该模式，使用了会报错。": "v3 пока не поддерживает этот режим, при использовании возникнет ошибка.",
     "v3输出如果觉得闷可以试试开超分": "Если вывод v3 кажется глухим, попробуйте включить супер-разрешение",
     "不切": "Не разрезать",
+    "不训练直接推v2ProPlus底模！": "Использовать базовую модель v2ProPlus без обучения!",
+    "不训练直接推v2Pro底模！": "Использовать базовую модель v2Pro без обучения!",
+    "不训练直接推v2底模！": "Использовать базовую модель v2 без обучения!",
+    "不训练直接推v3底模！": "Использовать базовую модель v3 без обучения!",
     "中文": "Китайский",
-    "中文教程文档": "Документация по китайскому руководству",
     "中英混合": "Китайский и английский",
     "主参考音频(请上传3~10秒内参考音频，超过会报错！)": "Основной опорный аудиофайл (пожалуйста, загрузите опорный аудиофайл длительностью от 3 до 10 секунд, превышение этого лимита вызовет ошибку!)",
     "主参考音频的文本": "Текст основного опорного аудиофайла",
@@ -87,6 +92,7 @@
     "句间停顿秒数": "Время паузы между предложениями (в секундах)",
     "可选项：通过拖拽多个文件上传多个参考音频（建议同性），平均融合他们的音色。如不填写此项，音色由左侧单个参考音频控制。如是微调模型，建议参考音频全部在微调训练集音色内，底模不用管。": "Необязательно: загрузите несколько файлов с эталонными аудиозаписями, перетащив их (рекомендуется одного пола), и усредните их тон. Если этот параметр не заполнен, тон будет контролироваться одной эталонной аудиозаписью слева. При тонкой настройке модели рекомендуется, чтобы все эталонные аудиозаписи имели тон в пределах обучающего набора для тонкой настройки; предварительно обученную модель можно игнорировать.",
     "合成语音": "Синтезированный голос",
+    "合成音频": "Синтезировать аудио",
     "合格的文件夹路径格式举例： E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例(去文件管理器地址栏拷就行了)。": "Пример допустимого формата пути к папке: E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例 (просто скопируйте из адресной строки файлового менеджера).",
     "后续将支持转音素、手工修改音素、语音合成分步执行。": "В будущем будет добавлена поддержка преобразования в фонемы, ручного редактирования фонемов и пошагового выполнения синтеза речи.",
     "听不清参考音频说的啥(不晓得写啥)可以开。开启后无视填写的参考文本。": "Если невозможно разобрать речь в эталонном аудио (и непонятно, что писать), можно включить эту опцию. При включении вводимый эталонный текст будет игнорироваться.",
@@ -104,11 +110,15 @@
     "已关闭": " Закрыто",
     "已完成": " Завершено",
     "已开启": " Включено",
+    "并行合成中": "Синтез в параллельном режиме",
     "并行推理": "Параллельный вывод",
     "并行推理模式已关闭": "Режим параллельного вывода отключен",
     "并行推理模式已开启": "Режим параллельного вывода включен",
+    "底模缺失，无法加载相应 LoRA 权重": "Отсутствует базовая модель, не удалось загрузить соответствующие веса LoRA.",
     "开启": "Включить ",
     "开启无参考文本模式。不填参考文本亦相当于开启。": "Включить режим без референтного текста. Не заполняя референтный текст, вы также включаете этот режим.",
+    "当开启并行推理模式时，SoVits V3/4模型不支持分桶处理，已自动关闭分桶处理": "При включенном режиме параллельного вывода модель SoVits V3/4 не поддерживает обработку по бакетам, эта функция была автоматически отключена.",
+    "微调模型信息": "Информация о дообученной модели",
     "微调训练": "Обучение с тонкой настройкой",
     "怎么切": "Как разрезать",
     "总训练轮数total_epoch": "Общее количество эпох обучения total_epoch",
@@ -140,8 +150,8 @@
     "模型": "Модели",
     "模型分为三类：": "Модели делятся на три типа:",
     "模型切换": "Переключение модели",
+    "模型加载中，请等待": "Модель загружается, пожалуйста, подождите...",
     "每张显卡的batch_size": "Размер пакета для каждой видеокарты",
-    "版本": "Версия",
     "粤英混合": "Кантоно-английская смесь",
     "粤语": "Кантонийский",
     "终止合成": "Завершить синтез",
@@ -150,6 +160,7 @@
     "缺少音素数据集": "Отсутствует набор данных фонем",
     "缺少音频数据集": "Отсутствует набор данных аудио",
     "英文": "Английский",
+    "训练模型的版本": "Версия обученной модели",
     "训练集格式化一键三连": "Форматирование обучающего набора одним кликом",
     "训练集格式化工具": "Инструмент форматирования обучающего набора",
     "语义Token提取": "Извлечение семантических токенов",
@@ -163,7 +174,6 @@
     "语音识别": "Распознавание речи",
     "语音识别工具": "Инструмент распознавания речи",
     "语音降噪": "Шумоподавление аудиофайлов",
-    "语音降噪工具": "Инструмент шумоподавления аудиофайлов",
     "请上传3~10秒内参考音频，超过会报错！": "Пожалуйста, загрузите референтное аудио длительностью от 3 до 10 секунд, иначе будет ошибка!",
     "请上传参考音频": "Пожалуйста, загрузите эталонное аудио",
     "请填入推理文本": "Пожалуйста, введите целевой текст",
@@ -187,7 +197,8 @@
     "进度": "Прогресс",
     "进程已终止": " Процесс завершён",
     "进程输出信息": " Выходные данные процесса",
-    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的一个是底模，体验5秒Zero Shot TTS用。": "Выберите модель, сохраненную в SoVITS_weights и GPT_weights после обучения. По умолчанию используется базовая модель для 5-секундного Zero Shot TTS.",
+    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的几个是底模，体验5秒Zero Shot TTS不训练推理用。": "Выберите обученные модели в папках SoVITS_weights и GPT_weights. По умолчанию доступны базовые модели для Zero Shot TTS-синтеза за 5 секунд без обучения.",
+    "采样步数(仅对V3/4生效)": "Число шагов выборки (действительно только для V3/4)",
     "采样步数,如果觉得电,提高试试,如果觉得慢,降低试试": "Количество шагов выборки: если кажется, что шумно, попробуйте увеличить, если кажется, что медленно, попробуйте уменьшить",
     "重复惩罚": "Штраф за повторение",
     "随机种子": "Случайное начальное значение",
@@ -199,13 +210,17 @@
     "韩文": "Корейский",
     "韩英混合": "Корейско-английская смесь",
     "音频加载失败": "Не удалось загрузить аудио",
-    "音频文件不存在，跳过：": "Аудиофайл не найден, пропускается: ",
-    "音频标注WebUI": "WebUI для аннотирования аудиофайлов",
+    "音频文件不存在，跳过：": "Файл аудио не найден, пропускается: ",
+    "音频标注WebUI": "Веб-интерфейс разметки аудио",
     "音频自动切分输入路径，可文件可文件夹": "Путь ввода для автоматического разделения аудио, может быть файлом или папкой",
     "音频超分中": "Супер-разрешение аудио в процессе",
+    "音频超采样": "Апсэмплирование аудио",
+    "音频超采样(仅对V3生效))": "Апсэмплирование аудио (действительно только для V3)",
+    "预测语义Token": "Предсказать семантический токен",
     "预训练GPT模型路径": "Путь к предобученной модели GPT",
     "预训练SSL模型路径": "Путь к предобученной модели SSL",
     "预训练SoVITS-D模型路径": "Путь к предобученной модели SoVITS-D",
     "预训练SoVITS-G模型路径": "Путь к предобученной модели SoVITS-G",
-    "预训练中文BERT模型路径": "Путь к предобученной китайской модели BERT"
+    "预训练中文BERT模型路径": "Путь к предобученной китайской модели BERT",
+    "预训练模型路径": "Путь к предобученной модели"
 }
