--- a/GPT_SoVITS/tools/i18n/locale/tr_TR.json
+++ b/GPT_SoVITS/tools/i18n/locale/tr_TR.json
@@ -18,6 +18,7 @@
     "ASR 模型": "ASR modeli",
     "ASR 模型尺寸": "ASR model boyutu",
     "ASR 语言设置": "ASR dil ayarları",
+    "CPU训练,较慢": "CPU ile Eğitim, daha yavaş",
     "GPT 训练: 模型权重文件在 GPT_weights/": "GPT Eğitimi: Model ağırlık dosyaları GPT_weights/ içinde",
     "GPT模型列表": "GPT model listesi",
     "GPT训练": "GPT Eğitimi",
@@ -25,12 +26,13 @@
     "GPU卡号,只能填1个整数": "GPU kart numarası, sadece bir tamsayı girilebilir",
     "GPU卡号以-分割，每个卡号一个进程": "GPU kart numaraları - ile ayrılır, her kart numarası için bir işlem",
     "LoRA秩": "LoRA Derecesi",
-    "SoVITS V3 底模缺失，无法加载相应 LoRA 权重": "SoVITS V3 temel modeli eksik, ilgili LoRA ağırlıkları yüklenemiyor",
     "SoVITS 训练: 模型权重文件在 SoVITS_weights/": "SoVITS Eğitimi: Model ağırlık dosyaları SoVITS_weights/ içinde",
     "SoVITS模型列表": "SoVITS model listesi",
     "SoVITS训练": "SoVITS Eğitimi",
+    "Submit Text: 将当前页所有文本框内容手工保存到内存和文件(翻页前后或者退出标注页面前如果没点这个按钮，你再翻回来就回滚了，白忙活。)": "Geçerli sayfadaki tüm metin kutusu içeriklerini manuel olarak belleğe ve dosyaya kaydedin. Bu butona sayfa değiştirmeden önce ya da etiketleme sayfasından çıkmadan önce tıklamazsanız, geri döndüğünüzde değişiklikler geri alınıp tüm işlemler boşa gidecektir.",
     "TTS推理WebUI": "TTS Çıkarım WebUI",
     "UVR5人声伴奏分离&去混响去延迟工具": "UVR5 İnsan Sesli ve Enstrümantal Ayrım & Reverb ve Gecikme Giderme Aracı",
+    "V3不支持无参考文本模式，请填写参考文本！": "V3, referans metin olmadan çalışmayı desteklememektedir! Lütfen bir referans metin giriniz!",
     "alpha_mix:混多少比例归一化后音频进来": "alpha_mix:Normalizasyondan sonraki sesin ne kadarlık bir oranı karıştırılsın",
     "batch_size": "Toplu Boyut",
     "hop_size:怎么算音量曲线，越小精度越大计算量越高（不是精度越大效果越好）": "hop_size:Ses seviyesi eğrisi nasıl hesaplanır, ne kadar küçükse hassasiyet o kadar yüksek ve hesaplama yükü o kadar artar (hassasiyet arttıkça etki mutlaka daha iyi olmaz)",
@@ -45,8 +47,11 @@
     "v3暂不支持该模式，使用了会报错。": "v3 bu modu desteklemiyor, kullanıldığında hata verecektir.",
     "v3输出如果觉得闷可以试试开超分": "v3 çıkışı eğer sıkıcıysa, süper çözünürlük açmayı deneyebilirsiniz",
     "不切": "Kesme",
+    "不训练直接推v2ProPlus底模！": "Eğitim yapmadan doğrudan v2ProPlus temel modelini kullan!",
+    "不训练直接推v2Pro底模！": "Eğitim yapmadan doğrudan v2Pro temel modelini kullan!",
+    "不训练直接推v2底模！": "Eğitim yapmadan doğrudan v2 temel modelini kullan!",
+    "不训练直接推v3底模！": "Eğitim yapmadan doğrudan v3 temel modelini kullan!",
     "中文": "Çince",
-    "中文教程文档": "Çince Eğitim Belgesi",
     "中英混合": "Çince ve İngilizce karışık",
     "主参考音频(请上传3~10秒内参考音频，超过会报错！)": "Ana Referans Sesi (Lütfen 3-10 saniye arasında referans sesi yükleyin, bu sınırı aşarsanız hata alırsınız!)",
     "主参考音频的文本": "Ana Referans Sesinin Metni",
@@ -87,6 +92,7 @@
     "句间停顿秒数": "Cümleler Arası Duraklama Süresi",
     "可选项：通过拖拽多个文件上传多个参考音频（建议同性），平均融合他们的音色。如不填写此项，音色由左侧单个参考音频控制。如是微调模型，建议参考音频全部在微调训练集音色内，底模不用管。": "İsteğe bağlı: Birden fazla referans ses dosyasını sürükleyip bırakarak yükleyin (aynı cinsiyetten olmaları önerilir) ve tonlarını ortalayın. Bu seçenek boş bırakılırsa, ton soldaki tek referans ses dosyası tarafından kontrol edilir. Modeli ince ayar yapıyorsanız, tüm referans ses dosyalarının ince ayar eğitim seti içindeki tonlara sahip olması önerilir; önceden eğitilmiş model dikkate alınmayabilir.",
     "合成语音": "Ses sentezi",
+    "合成音频": "Ses Sentezleme",
     "合格的文件夹路径格式举例： E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例(去文件管理器地址栏拷就行了)。": "Geçerli klasör yolu formatı örneği: E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例 (dosya yöneticisi adres çubuğundan kopyalayabilirsiniz).",
     "后续将支持转音素、手工修改音素、语音合成分步执行。": "Sonraki sürümlerde fonem dönüşümü, el ile fonem düzenleme ve adım adım konuşma sentezi desteği eklenecek.",
     "听不清参考音频说的啥(不晓得写啥)可以开。开启后无视填写的参考文本。": "Referans ses kaydını anlamıyorsanız (ne yazacağınızı bilmiyorsanız) açabilirsiniz. Açıldığında yazılmış olan referans metni göz ardı edilir.",
@@ -104,11 +110,15 @@
     "已关闭": " Kapalı",
     "已完成": " Tamamlandı",
     "已开启": " Açık",
+    "并行合成中": "Paralel Sentezleme Yapılıyor",
     "并行推理": "Paralel Çıkarım",
     "并行推理模式已关闭": "Paralel Çıkarım Modu Kapalı",
     "并行推理模式已开启": "Paralel Çıkarım Modu Etkin",
+    "底模缺失，无法加载相应 LoRA 权重": "Temel model eksik, ilgili LoRA ağırlıkları yüklenemedi.",
     "开启": "Aç ",
     "开启无参考文本模式。不填参考文本亦相当于开启。": "Referans metni olmayan mod açık. Referans metni doldurulmazsa bu mod otomatik olarak açılır.",
+    "当开启并行推理模式时，SoVits V3/4模型不支持分桶处理，已自动关闭分桶处理": "Paralel çıkarım modu etkinleştirildiğinde, SoVITS V3/4 modelleri bölme işlemeyi desteklemez ve bu işlem otomatik olarak devre dışı bırakılır.",
+    "微调模型信息": "İnce Ayar Model Bilgisi",
     "微调训练": "İnce Ayar Eğitimi",
     "怎么切": "Nasıl kesilir",
     "总训练轮数total_epoch": "Toplam eğitim turu sayısı total_epoch",
@@ -140,8 +150,8 @@
     "模型": "Model",
     "模型分为三类：": "Modeller üç türdedir:",
     "模型切换": "Model değiştirme",
+    "模型加载中，请等待": "Model yükleniyor, lütfen bekleyin...",
     "每张显卡的batch_size": "Her bir ekran kartı için batch_size",
-    "版本": "Versiyon",
     "粤英混合": "Yue-İngilizce Karışık",
     "粤语": "Yue",
     "终止合成": "Sentezi Sonlandır",
@@ -150,6 +160,7 @@
     "缺少音素数据集": "Fonem Veri Seti Eksik",
     "缺少音频数据集": "Ses Veri Seti Eksik",
     "英文": "İngilizce",
+    "训练模型的版本": "Eğitilmiş Model Versiyonu",
     "训练集格式化一键三连": "Eğitim Seti Formatlama Tek Tıkla Üçlü",
     "训练集格式化工具": "Eğitim Seti Formatlama Aracı",
     "语义Token提取": "Anlamlı Token Çıkartma",
@@ -163,7 +174,6 @@
     "语音识别": "Ses Tanıma",
     "语音识别工具": "Ses Tanıma Aracı",
     "语音降噪": "Ses Gürültü Azaltma",
-    "语音降噪工具": "Ses Gürültü Azaltma Aracı",
     "请上传3~10秒内参考音频，超过会报错！": "Lütfen 3~10 saniye arasında bir referans ses dosyası yükleyin, aşım durumunda hata verilecektir!",
     "请上传参考音频": "Lütfen Referans Sesi Yükleyin",
     "请填入推理文本": "Lütfen Hedef Metni Girin",
@@ -187,7 +197,8 @@
     "进度": "İlerleme",
     "进程已终止": " İşlem Sonlandırıldı",
     "进程输出信息": " İşlem Çıktı Bilgisi",
-    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的一个是底模，体验5秒Zero Shot TTS用。": "Eğitimi tamamlanmış ve SoVITS_weights ile GPT_weights altına kaydedilmiş modeli seçin. Varsayılan bir temel modeldir, 5 saniyelik Zero Shot TTS deneyimi için kullanılır.",
+    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的几个是底模，体验5秒Zero Shot TTS不训练推理用。": "SoVITS_weights ve GPT_weights altında kayıtlı eğitilmiş modelleri seçin. Varsayılanlar temel modellerdir, 5 saniyede Zero Shot TTS çıkarımını eğitimsiz deneyimleyin.",
+    "采样步数(仅对V3/4生效)": "Örnekleme Adım Sayısı (Sadece V3/4 için geçerli)",
     "采样步数,如果觉得电,提高试试,如果觉得慢,降低试试": "Örnekleme Adımları: Eğer gürültülü görünüyorsa, adımları artırın; eğer yavaş görünüyorsa, adımları azaltın",
     "重复惩罚": "Tekrarlama Cezası",
     "随机种子": "Rastgele Tohum",
@@ -199,13 +210,17 @@
     "韩文": "Korece",
     "韩英混合": "Korece-İngilizce Karışık",
     "音频加载失败": "Ses Yüklenemedi",
-    "音频文件不存在，跳过：": "Ses Dosyası Bulunamadı, Atlanıyor: ",
+    "音频文件不存在，跳过：": "Ses dosyası bulunamadı, atlanıyor: ",
     "音频标注WebUI": "Ses Etiketleme WebUI",
     "音频自动切分输入路径，可文件可文件夹": "Ses otomatik bölme giriş yolu, dosya veya klasör olabilir",
-    "音频超分中": "Ses Süper Çözünürlük Yapılıyor",
+    "音频超分中": "Ses Süper Çözünürlük İşlemi Devam Ediyor",
+    "音频超采样": "Ses Üst-örnekleme",
+    "音频超采样(仅对V3生效))": "Ses Üst-örnekleme (Sadece V3 için geçerli)",
+    "预测语义Token": "Anlamsal Token Tahmini",
     "预训练GPT模型路径": "Önceden Eğitilmiş GPT Modeli Yolu",
     "预训练SSL模型路径": "Önceden Eğitilmiş SSL Modeli Yolu",
     "预训练SoVITS-D模型路径": "Önceden Eğitilmiş SoVITS-D Modeli Yolu",
     "预训练SoVITS-G模型路径": "Önceden Eğitilmiş SoVITS-G Modeli Yolu",
-    "预训练中文BERT模型路径": "Önceden Eğitilmiş Çince BERT Modeli Yolu"
+    "预训练中文BERT模型路径": "Önceden Eğitilmiş Çince BERT Modeli Yolu",
+    "预训练模型路径": "Önceden Eğitilmiş Model Yolu"
 }
