--- a/GPT_SoVITS/tools/i18n/locale/zh_CN.json
+++ b/GPT_SoVITS/tools/i18n/locale/zh_CN.json
@@ -18,6 +18,7 @@
     "ASR 模型": "ASR 模型",
     "ASR 模型尺寸": "ASR 模型尺寸",
     "ASR 语言设置": "ASR 语言设置",
+    "CPU训练,较慢": "CPU训练,较慢",
     "GPT 训练: 模型权重文件在 GPT_weights/": "GPT 训练: 模型权重文件在 GPT_weights/",
     "GPT模型列表": "GPT模型列表",
     "GPT训练": "GPT训练",
@@ -25,12 +26,13 @@
     "GPU卡号,只能填1个整数": "GPU卡号,只能填1个整数",
     "GPU卡号以-分割，每个卡号一个进程": "GPU卡号以-分割，每个卡号一个进程",
     "LoRA秩": "LoRA秩",
-    "SoVITS V3 底模缺失，无法加载相应 LoRA 权重": "SoVITS V3 底模缺失，无法加载相应 LoRA 权重",
     "SoVITS 训练: 模型权重文件在 SoVITS_weights/": "SoVITS 训练: 模型权重文件在 SoVITS_weights/",
     "SoVITS模型列表": "SoVITS模型列表",
     "SoVITS训练": "SoVITS训练",
+    "Submit Text: 将当前页所有文本框内容手工保存到内存和文件(翻页前后或者退出标注页面前如果没点这个按钮，你再翻回来就回滚了，白忙活。)": "Submit Text: 将当前页所有文本框内容手工保存到内存和文件(翻页前后或者退出标注页面前如果没点这个按钮，你再翻回来就回滚了，白忙活。)",
     "TTS推理WebUI": "TTS推理WebUI",
     "UVR5人声伴奏分离&去混响去延迟工具": "UVR5人声伴奏分离&去混响去延迟工具",
+    "V3不支持无参考文本模式，请填写参考文本！": "V3不支持无参考文本模式，请填写参考文本！",
     "alpha_mix:混多少比例归一化后音频进来": "alpha_mix:混多少比例归一化后音频进来",
     "batch_size": "batch_size",
     "hop_size:怎么算音量曲线，越小精度越大计算量越高（不是精度越大效果越好）": "hop_size:怎么算音量曲线，越小精度越大计算量越高（不是精度越大效果越好）",
@@ -45,8 +47,11 @@
     "v3暂不支持该模式，使用了会报错。": "v3暂不支持该模式，使用了会报错。",
     "v3输出如果觉得闷可以试试开超分": "v3输出如果觉得闷可以试试开超分",
     "不切": "不切",
+    "不训练直接推v2ProPlus底模！": "不训练直接推v2ProPlus底模！",
+    "不训练直接推v2Pro底模！": "不训练直接推v2Pro底模！",
+    "不训练直接推v2底模！": "不训练直接推v2底模！",
+    "不训练直接推v3底模！": "不训练直接推v3底模！",
     "中文": "中文",
-    "中文教程文档": "中文教程文档",
     "中英混合": "中英混合",
     "主参考音频(请上传3~10秒内参考音频，超过会报错！)": "主参考音频(请上传3~10秒内参考音频，超过会报错！)",
     "主参考音频的文本": "主参考音频的文本",
@@ -87,6 +92,7 @@
     "句间停顿秒数": "句间停顿秒数",
     "可选项：通过拖拽多个文件上传多个参考音频（建议同性），平均融合他们的音色。如不填写此项，音色由左侧单个参考音频控制。如是微调模型，建议参考音频全部在微调训练集音色内，底模不用管。": "可选项：通过拖拽多个文件上传多个参考音频（建议同性），平均融合他们的音色。如不填写此项，音色由左侧单个参考音频控制。如是微调模型，建议参考音频全部在微调训练集音色内，底模不用管。",
     "合成语音": "合成语音",
+    "合成音频": "合成音频",
     "合格的文件夹路径格式举例： E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例(去文件管理器地址栏拷就行了)。": "合格的文件夹路径格式举例： E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例(去文件管理器地址栏拷就行了)。",
     "后续将支持转音素、手工修改音素、语音合成分步执行。": "后续将支持转音素、手工修改音素、语音合成分步执行。",
     "听不清参考音频说的啥(不晓得写啥)可以开。开启后无视填写的参考文本。": "听不清参考音频说的啥(不晓得写啥)可以开。开启后无视填写的参考文本。",
@@ -104,11 +110,15 @@
     "已关闭": "已关闭",
     "已完成": "已完成",
     "已开启": "已开启",
+    "并行合成中": "并行合成中",
     "并行推理": "并行推理",
     "并行推理模式已关闭": "并行推理模式已关闭",
     "并行推理模式已开启": "并行推理模式已开启",
+    "底模缺失，无法加载相应 LoRA 权重": "底模缺失，无法加载相应 LoRA 权重",
     "开启": "开启",
     "开启无参考文本模式。不填参考文本亦相当于开启。": "开启无参考文本模式。不填参考文本亦相当于开启。",
+    "当开启并行推理模式时，SoVits V3/4模型不支持分桶处理，已自动关闭分桶处理": "当开启并行推理模式时，SoVits V3/4模型不支持分桶处理，已自动关闭分桶处理",
+    "微调模型信息": "微调模型信息",
     "微调训练": "微调训练",
     "怎么切": "怎么切",
     "总训练轮数total_epoch": "总训练轮数total_epoch",
@@ -140,8 +150,8 @@
     "模型": "模型",
     "模型分为三类：": "模型分为三类：",
     "模型切换": "模型切换",
+    "模型加载中，请等待": "模型加载中，请等待",
     "每张显卡的batch_size": "每张显卡的batch_size",
-    "版本": "版本",
     "粤英混合": "粤英混合",
     "粤语": "粤语",
     "终止合成": "终止合成",
@@ -150,6 +160,7 @@
     "缺少音素数据集": "缺少音素数据集",
     "缺少音频数据集": "缺少音频数据集",
     "英文": "英文",
+    "训练模型的版本": "训练模型的版本",
     "训练集格式化一键三连": "训练集格式化一键三连",
     "训练集格式化工具": "训练集格式化工具",
     "语义Token提取": "语义Token提取",
@@ -163,7 +174,6 @@
     "语音识别": "语音识别",
     "语音识别工具": "语音识别工具",
     "语音降噪": "语音降噪",
-    "语音降噪工具": "语音降噪工具",
     "请上传3~10秒内参考音频，超过会报错！": "请上传3~10秒内参考音频，超过会报错！",
     "请上传参考音频": "请上传参考音频",
     "请填入推理文本": "请填入推理文本",
@@ -187,7 +197,8 @@
     "进度": "进度",
     "进程已终止": "进程已终止",
     "进程输出信息": "进程输出信息",
-    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的一个是底模，体验5秒Zero Shot TTS用。": "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的一个是底模，体验5秒Zero Shot TTS用。",
+    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的几个是底模，体验5秒Zero Shot TTS不训练推理用。": "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的几个是底模，体验5秒Zero Shot TTS不训练推理用。",
+    "采样步数(仅对V3/4生效)": "采样步数(仅对V3/4生效)",
     "采样步数,如果觉得电,提高试试,如果觉得慢,降低试试": "采样步数,如果觉得电,提高试试,如果觉得慢,降低试试",
     "重复惩罚": "重复惩罚",
     "随机种子": "随机种子",
@@ -203,9 +214,13 @@
     "音频标注WebUI": "音频标注WebUI",
     "音频自动切分输入路径，可文件可文件夹": "音频自动切分输入路径，可文件可文件夹",
     "音频超分中": "音频超分中",
+    "音频超采样": "音频超采样",
+    "音频超采样(仅对V3生效))": "音频超采样(仅对V3生效))",
+    "预测语义Token": "预测语义Token",
     "预训练GPT模型路径": "预训练GPT模型路径",
     "预训练SSL模型路径": "预训练SSL模型路径",
     "预训练SoVITS-D模型路径": "预训练SoVITS-D模型路径",
     "预训练SoVITS-G模型路径": "预训练SoVITS-G模型路径",
-    "预训练中文BERT模型路径": "预训练中文BERT模型路径"
+    "预训练中文BERT模型路径": "预训练中文BERT模型路径",
+    "预训练模型路径": "预训练模型路径"
 }
