--- a/GPT_SoVITS/tools/i18n/locale/zh_TW.json
+++ b/GPT_SoVITS/tools/i18n/locale/zh_TW.json
@@ -18,6 +18,7 @@
     "ASR 模型": "ASR 模型",
     "ASR 模型尺寸": "ASR 模型尺寸",
     "ASR 语言设置": "ASR 語言設置",
+    "CPU训练,较慢": "CPU訓練，較慢",
     "GPT 训练: 模型权重文件在 GPT_weights/": "GPT 訓練: 模型權重文件在 GPT_weights/",
     "GPT模型列表": "GPT模型列表",
     "GPT训练": "GPT訓練",
@@ -25,12 +26,13 @@
     "GPU卡号,只能填1个整数": "GPU卡號,只能填1個整數",
     "GPU卡号以-分割，每个卡号一个进程": "GPU卡號以-分割，每個卡號一個進程",
     "LoRA秩": "LoRA階",
-    "SoVITS V3 底模缺失，无法加载相应 LoRA 权重": "SoVITS V3 底模缺失，無法加載相應 LoRA 權重",
     "SoVITS 训练: 模型权重文件在 SoVITS_weights/": "SoVITS 訓練: 模型權重文件在 SoVITS_weights/",
     "SoVITS模型列表": "SoVITS模型列表",
     "SoVITS训练": "SoVITS訓練",
+    "Submit Text: 将当前页所有文本框内容手工保存到内存和文件(翻页前后或者退出标注页面前如果没点这个按钮，你再翻回来就回滚了，白忙活。)": "送出文字：手動儲存目前頁面所有文字欄位內容至記憶體與檔案。若您在換頁前後或離開標註頁面前未按下此按鈕，當您返回時異動將會復原，辛苦的工作便會白費。",
     "TTS推理WebUI": "TTS推理WebUI",
     "UVR5人声伴奏分离&去混响去延迟工具": "UVR5人聲伴奏分離&去混響去延遲工具",
+    "V3不支持无参考文本模式，请填写参考文本！": "V3 不支援無參考文字模式，請填寫參考文字！",
     "alpha_mix:混多少比例归一化后音频进来": "alpha_mix:混多少比例歸一化後音頻進來",
     "batch_size": "批次大小",
     "hop_size:怎么算音量曲线，越小精度越大计算量越高（不是精度越大效果越好）": "hop_size:怎麼算音量曲線，越小精度越大計算量越高（不是精度越大效果越好）",
@@ -45,8 +47,11 @@
     "v3暂不支持该模式，使用了会报错。": "v3暫不支援該模式，使用了會報錯。",
     "v3输出如果觉得闷可以试试开超分": "v3輸出如果覺得悶可以試試開超分",
     "不切": "不切",
+    "不训练直接推v2ProPlus底模！": "不訓練直接使用v2ProPlus底模！",
+    "不训练直接推v2Pro底模！": "不訓練直接使用v2Pro底模！",
+    "不训练直接推v2底模！": "不訓練直接使用v2底模！",
+    "不训练直接推v3底模！": "不訓練直接使用v3底模！",
     "中文": "中文",
-    "中文教程文档": "中文教程文檔",
     "中英混合": "中英混合",
     "主参考音频(请上传3~10秒内参考音频，超过会报错！)": "主參考音檔（請上傳3~10秒內參考音檔，超過會報錯！）",
     "主参考音频的文本": "主參考音檔的文字",
@@ -87,6 +92,7 @@
     "句间停顿秒数": "句間停頓秒數",
     "可选项：通过拖拽多个文件上传多个参考音频（建议同性），平均融合他们的音色。如不填写此项，音色由左侧单个参考音频控制。如是微调模型，建议参考音频全部在微调训练集音色内，底模不用管。": "可選項：通過拖曳多個文件上傳多個參考音頻（建議同性），平均融合他們的音色。如不填寫此項，音色由左側單個參考音頻控制。如是微調模型，建議參考音頻全部在微調訓練集音色內，底模不用管。",
     "合成语音": "合成語音",
+    "合成音频": "合成音訊",
     "合格的文件夹路径格式举例： E:\\codes\\py39\\vits_vc_gpu\\白鹭霜华测试样例(去文件管理器地址栏拷就行了)。": "合格的資料夾路徑格式舉例： E:\\codes\\py39\\vits_vc_gpu\\白鷺霜華測試範例(去文件管理器地址欄拷就行了)。",
     "后续将支持转音素、手工修改音素、语音合成分步执行。": "後續將支援轉音素、手工修改音素、語音合成分步執行。",
     "听不清参考音频说的啥(不晓得写啥)可以开。开启后无视填写的参考文本。": "聽不清參考音頻說的啥(不曉得寫啥)可以開，開啟後無視填寫的參考文本。",
@@ -104,11 +110,15 @@
     "已关闭": "已關閉",
     "已完成": "已完成",
     "已开启": "已開啟",
+    "并行合成中": "平行合成中",
     "并行推理": "並行推理",
     "并行推理模式已关闭": "並行推理模式已關閉",
     "并行推理模式已开启": "並行推理模式已開啟",
+    "底模缺失，无法加载相应 LoRA 权重": "底模缺失，無法載入相應 LoRA 權重",
     "开启": "開啟",
     "开启无参考文本模式。不填参考文本亦相当于开启。": "開啟無參考文本模式。不填參考文本亦相當於開啟。",
+    "当开启并行推理模式时，SoVits V3/4模型不支持分桶处理，已自动关闭分桶处理": "啟用平行推論模式時，SoVITS V3/4 模型不支援分倉處理，已自動關閉該功能。",
+    "微调模型信息": "微調模型資訊",
     "微调训练": "微調訓練",
     "怎么切": "怎麼切",
     "总训练轮数total_epoch": "總訓練輪數total_epoch",
@@ -140,8 +150,8 @@
     "模型": "模型",
     "模型分为三类：": "模型分為三類：",
     "模型切换": "模型切換",
+    "模型加载中，请等待": "模型載入中，請稍候",
     "每张显卡的batch_size": "每張顯卡的batch_size",
-    "版本": "版本",
     "粤英混合": "粵英混合",
     "粤语": "粵語",
     "终止合成": "終止合成",
@@ -150,6 +160,7 @@
     "缺少音素数据集": "缺少音素數據集",
     "缺少音频数据集": "缺少音頻數據集",
     "英文": "英文",
+    "训练模型的版本": "訓練模型的版本",
     "训练集格式化一键三连": "訓練集格式化一鍵三連",
     "训练集格式化工具": "訓練集格式化工具",
     "语义Token提取": "語義Token提取",
@@ -163,7 +174,6 @@
     "语音识别": "語音識別",
     "语音识别工具": "語音識別工具",
     "语音降噪": "語音降噪",
-    "语音降噪工具": "語音降噪工具",
     "请上传3~10秒内参考音频，超过会报错！": "請上傳3~10秒內參考音頻，超過會報錯！",
     "请上传参考音频": "請上傳參考音頻",
     "请填入推理文本": "請填入推理文本",
@@ -187,7 +197,8 @@
     "进度": "進度",
     "进程已终止": "進程已終止",
     "进程输出信息": "進程輸出資訊",
-    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的一个是底模，体验5秒Zero Shot TTS用。": "選擇訓練完存放在SoVITS_weights和GPT_weights下的模型。默認的一個是底模，體驗5秒Zero Shot TTS用。",
+    "选择训练完存放在SoVITS_weights和GPT_weights下的模型。默认的几个是底模，体验5秒Zero Shot TTS不训练推理用。": "選擇訓練完成存放在SoVITS_weights和GPT_weights下的模型。預設的幾個是底模，體驗5秒Zero Shot TTS不訓練推理使用。",
+    "采样步数(仅对V3/4生效)": "取樣步數（僅適用於 V3/4）",
     "采样步数,如果觉得电,提高试试,如果觉得慢,降低试试": "採樣步數，如果覺得電，提高試試，如果覺得慢，降低試試",
     "重复惩罚": "重複懲罰",
     "随机种子": "隨機種子",
@@ -199,13 +210,17 @@
     "韩文": "韓文",
     "韩英混合": "韓英混合",
     "音频加载失败": "無法加載音頻",
-    "音频文件不存在，跳过：": "音檔不存在，跳過：",
-    "音频标注WebUI": "音頻標註WebUI",
-    "音频自动切分输入路径，可文件可文件夹": "音頻自動切分輸入路徑，可文件可文件夾",
-    "音频超分中": "音頻超分中",
-    "预训练GPT模型路径": "預訓練GPT模型路徑",
-    "预训练SSL模型路径": "預訓練SSL模型路徑",
-    "预训练SoVITS-D模型路径": "預訓練SoVITS-D模型路徑",
-    "预训练SoVITS-G模型路径": "預訓練SoVITS-G模型路徑",
-    "预训练中文BERT模型路径": "預訓練中文BERT模型路徑"
+    "音频文件不存在，跳过：": "音訊檔案不存在，跳過：",
+    "音频标注WebUI": "音訊標註 WebUI",
+    "音频自动切分输入路径，可文件可文件夹": "音訊自動切割輸入路徑，可為檔案或資料夾",
+    "音频超分中": "音訊超高解析度處理中",
+    "音频超采样": "音訊超取樣",
+    "音频超采样(仅对V3生效))": "音訊超取樣（僅適用於 V3）",
+    "预测语义Token": "預測語意 Token",
+    "预训练GPT模型路径": "預訓練 GPT 模型路徑",
+    "预训练SSL模型路径": "預訓練 SSL 模型路徑",
+    "预训练SoVITS-D模型路径": "預訓練 SoVITS-D 模型路徑",
+    "预训练SoVITS-G模型路径": "預訓練 SoVITS-G 模型路徑",
+    "预训练中文BERT模型路径": "預訓練中文BERT模型路徑",
+    "预训练模型路径": "預訓練模型路徑"
 }
